--- a/examples/card.html
+++ b/examples/card.html
@@ -3,8 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <title>组件平台显示内容</title>
-    <link type="text/css" rel="stylesheet" href="/frontPage/css/content.min.css?4"/>
-    <script type="text/javascript" src="//cdn.bootcss.com/jquery/1.10.1/jquery.min.js"></script>
+    <link type="text/css" rel="stylesheet" href="//storage.jd.com/v2.0.0/content.min.css" />
+    <link type="text/css" rel="stylesheet" href="//storage.360buyimg.com/v2.0.0/nv.min.css" />
+    <script type="text/javascript" src="//storage.360buyimg.com/v2.0.0/nv.js"></script>
 
     <style>
         .c-demo>div{
@@ -18,8 +19,8 @@
         <p>Card 卡片</p>
         <span>
             卡片容器，用来显示文字、列表、图文等元素。
-            <a style="font-size: 16px; margin-right: 15px;" href="//github.com/guguaihaha/zr-source/blob/master/docs/inner/card.md"><b>API文档</b></a>
-            <a style="font-size: 16px" href="//github.com/guguaihaha/zr-source/issues/20"><b>组件问题反馈和讨论</b></a>
+            <a style="font-size: 16px; margin-right: 15px;" href="//github.com/guguaihaha/nv-source/blob/master/docs/inner/card.md"><b>API文档</b></a>
+            <a style="font-size: 16px" href="//github.com/guguaihaha/nv-source/issues/20"><b>组件问题反馈和讨论</b></a>
         </span>
     </section>
     <div class="c-line"></div>
@@ -33,11 +34,11 @@
         <div class="c-code-switch">&lt;code&gt;</div>
         <div class="c-demo">
             <div style="width: 320px">
-                <div class="zr-card">
-                    <div class="zr-card-title">
+                <div class="nv-card">
+                    <div class="nv-card-title">
                         <b>Title</b>
                     </div>
-                    <div class="zr-card-content">
+                    <div class="nv-card-content">
                         <ul>
                             <li>This is content…This is content…</li>
                             <li>This is content…This is content…</li>
@@ -48,11 +49,11 @@
             </div>
         </div>
         <div class="c-code-inner c-code-hide">
-<div class="zr-card">
-    <div class="zr-card-title">
+<div class="nv-card">
+    <div class="nv-card-title">
         <b>Title</b>
     </div>
-    <div class="zr-card-content">
+    <div class="nv-card-content">
         <ul>
             <li>This is content…This is content…</li>
             <li>This is content…This is content…</li>
@@ -61,7 +62,7 @@
     </div>
 </div>
         </div>
-        <a href="javascript:void(0);" class="c-toggle"><span>显示代码</span><i class="zricon-arrow-down"></i></a>
+        <a href="javascript:void(0);" class="c-toggle"><span>显示代码</span><i class="nvicon-arrow-down"></i></a>
     </section>
     <div class="c-block-50"></div>
     <section class="c-sub-title">
@@ -73,12 +74,12 @@
         <div class="c-code-switch">&lt;code&gt;</div>
         <div class="c-demo">
             <div style="width: 320px;display: inline-block;margin-right: 16px">
-                <div class="zr-card">
-                    <div class="zr-card-title">
+                <div class="nv-card">
+                    <div class="nv-card-title">
                         <b>Title</b>
-                        <i class="zricon-seting-empty zr-card-operate"></i>
+                        <i class="nvicon-seting-empty nv-card-operate"></i>
                     </div>
-                    <div class="zr-card-content">
+                    <div class="nv-card-content">
                         <ul>
                             <li>This is content…This is content…</li>
                             <li>This is content…This is content…</li>
@@ -88,25 +89,25 @@
                 </div>
             </div>
             <div style="width: 320px;display: inline-block">
-                <div class="zr-card">
-                    <div class="zr-card-title">
+                <div class="nv-card">
+                    <div class="nv-card-title">
                         <b>Title</b>
-                        <div class="zr-dropdown">
-                            <i class="zricon-menu-empty zr-card-operate"></i>
-                            <ul class="zr-dropdown-menu">
-                                <li class="zr-dropdown-item">
+                        <div class="nv-dropdown">
+                            <i class="nvicon-menu-empty nv-card-operate"></i>
+                            <ul class="nv-dropdown-menu">
+                                <li class="nv-dropdown-item">
                                     <a target="_blank" href="#">Option 1</a>
                                 </li>
-                                <li class="zr-dropdown-item">
+                                <li class="nv-dropdown-item">
                                     <a target="_blank" href="#">Option 2</a>
                                 </li>
-                                <li class="zr-dropdown-item">
+                                <li class="nv-dropdown-item">
                                     Option 3
                                 </li>
                             </ul>
                         </div>
                     </div>
-                    <div class="zr-card-content">
+                    <div class="nv-card-content">
                         <ul>
                             <li>This is content…This is content…</li>
                             <li>This is content…This is content…</li>
@@ -117,12 +118,12 @@
             </div>
         </div>
         <div class="c-code-inner c-code-hide">
-<div class="zr-card">
-    <div class="zr-card-title">
+<div class="nv-card">
+    <div class="nv-card-title">
         <b>Title</b>
-        <i class="zricon-seting-empty zr-card-operate"></i>
+        <i class="nvicon-seting-empty nv-card-operate"></i>
     </div>
-    <div class="zr-card-content">
+    <div class="nv-card-content">
         <ul>
             <li>This is content…This is content…</li>
             <li>This is content…This is content…</li>
@@ -130,25 +131,25 @@
         </ul>
     </div>
 </div>
-<div class="zr-card">
-    <div class="zr-card-title">
+<div class="nv-card">
+    <div class="nv-card-title">
         <b>Title</b>
-        <div class="zr-dropdown">
-            <i class="zricon-menu-empty zr-card-operate"></i>
-            <ul class="zr-dropdown-menu">
-                <li class="zr-dropdown-item">
+        <div class="nv-dropdown">
+            <i class="nvicon-menu-empty nv-card-operate"></i>
+            <ul class="nv-dropdown-menu">
+                <li class="nv-dropdown-item">
                     <a target="_blank" href="#">Option 1</a>
                 </li>
-                <li class="zr-dropdown-item">
+                <li class="nv-dropdown-item">
                     <a target="_blank" href="#">Option 2</a>
                 </li>
-                <li class="zr-dropdown-item">
+                <li class="nv-dropdown-item">
                     Option 3
                 </li>
             </ul>
         </div>
     </div>
-    <div class="zr-card-content">
+    <div class="nv-card-content">
         <ul>
             <li>This is content…This is content…</li>
             <li>This is content…This is content…</li>
@@ -157,7 +158,7 @@
     </div>
 </div>
         </div>
-        <a href="javascript:void(0);" class="c-toggle"><span>显示代码</span><i class="zricon-arrow-down"></i></a>
+        <a href="javascript:void(0);" class="c-toggle"><span>显示代码</span><i class="nvicon-arrow-down"></i></a>
     </section>
 
     <div class="c-block-50"></div>
@@ -171,11 +172,11 @@
         <div class="c-demo">
             <div style="width: 368px;background-color: #F5F5F5;padding: 24px 24px">
                 <div style="width: 320px">
-                    <div class="zr-card zr-card-noborder">
-                        <div class="zr-card-title">
+                    <div class="nv-card nv-card-noborder">
+                        <div class="nv-card-title">
                             <b>Title</b>
                         </div>
-                        <div class="zr-card-content">
+                        <div class="nv-card-content">
                             <ul>
                                 <li>This is content…This is content…</li>
                                 <li>This is content…This is content…</li>
@@ -187,11 +188,11 @@
             </div>
         </div>
         <div class="c-code-inner c-code-hide">
-<div class="zr-card zr-card-noborder">
-    <div class="zr-card-title">
+<div class="nv-card nv-card-noborder">
+    <div class="nv-card-title">
         <b>Title</b>
     </div>
-    <div class="zr-card-content">
+    <div class="nv-card-content">
         <ul>
             <li>This is content…This is content…</li>
             <li>This is content…This is content…</li>
@@ -200,7 +201,7 @@
     </div>
 </div>
         </div>
-        <a href="javascript:void(0);" class="c-toggle"><span>显示代码</span><i class="zricon-arrow-down"></i></a>
+        <a href="javascript:void(0);" class="c-toggle"><span>显示代码</span><i class="nvicon-arrow-down"></i></a>
     </section>
 
     <div class="c-block-50"></div>
@@ -213,8 +214,8 @@
         <div class="c-code-switch">&lt;code&gt;</div>
         <div class="c-demo">
             <div style="width: 320px">
-                <div class="zr-card">
-                    <div class="zr-card-content">
+                <div class="nv-card">
+                    <div class="nv-card-content">
                         <ul>
                             <li>This is content…This is content…</li>
                             <li>This is content…This is content…</li>
@@ -225,8 +226,8 @@
             </div>
         </div>
         <div class="c-code-inner c-code-hide">
-<div class="zr-card">
-    <div class="zr-card-content">
+<div class="nv-card">
+    <div class="nv-card-content">
         <ul>
             <li>This is content…This is content…</li>
             <li>This is content…This is content…</li>
@@ -235,7 +236,7 @@
     </div>
 </div>
         </div>
-        <a href="javascript:void(0);" class="c-toggle"><span>显示代码</span><i class="zricon-arrow-down"></i></a>
+        <a href="javascript:void(0);" class="c-toggle"><span>显示代码</span><i class="nvicon-arrow-down"></i></a>
     </section>
 
     <!--<div class="c-block-50"></div>-->
@@ -248,44 +249,44 @@
         <!--<div class="c-code-switch">&lt;code&gt;</div>-->
         <!--<div class="c-demo">-->
             <!--<div style="background-color: #F5F5F5;width: 889px">-->
-                <!--<div class="zr-card-group">-->
-                    <!--<div class="zr-card">-->
-                        <!--<div class="zr-card-content">-->
+                <!--<div class="nv-card-group">-->
+                    <!--<div class="nv-card">-->
+                        <!--<div class="nv-card-content">-->
                             <!--Content-->
                         <!--</div>-->
                     <!--</div>-->
-                    <!--<div class="zr-card">-->
-                        <!--<div class="zr-card-content">-->
+                    <!--<div class="nv-card">-->
+                        <!--<div class="nv-card-content">-->
                             <!--Content-->
                         <!--</div>-->
                     <!--</div>-->
-                    <!--<div class="zr-card">-->
-                        <!--<div class="zr-card-content">-->
+                    <!--<div class="nv-card">-->
+                        <!--<div class="nv-card-content">-->
                             <!--Content-->
                         <!--</div>-->
                     <!--</div>-->
-                    <!--<div class="zr-card">-->
-                        <!--<div class="zr-card-content">-->
+                    <!--<div class="nv-card">-->
+                        <!--<div class="nv-card-content">-->
                             <!--Content-->
                         <!--</div>-->
                     <!--</div>-->
-                    <!--<div class="zr-card">-->
-                        <!--<div class="zr-card-content">-->
+                    <!--<div class="nv-card">-->
+                        <!--<div class="nv-card-content">-->
                             <!--Content-->
                         <!--</div>-->
                     <!--</div>-->
-                    <!--<div class="zr-card">-->
-                        <!--<div class="zr-card-content">-->
+                    <!--<div class="nv-card">-->
+                        <!--<div class="nv-card-content">-->
                             <!--Content-->
                         <!--</div>-->
                     <!--</div>-->
-                    <!--<div class="zr-card">-->
-                        <!--<div class="zr-card-content">-->
+                    <!--<div class="nv-card">-->
+                        <!--<div class="nv-card-content">-->
                             <!--Content-->
                         <!--</div>-->
                     <!--</div>-->
-                    <!--<div class="zr-card">-->
-                        <!--<div class="zr-card-content">-->
+                    <!--<div class="nv-card">-->
+                        <!--<div class="nv-card-content">-->
                             <!--Content-->
                         <!--</div>-->
                     <!--</div>-->
@@ -293,50 +294,50 @@
             <!--</div>-->
         <!--</div>-->
         <!--<div class="c-code-inner c-code-hide">-->
-<!--<div class="zr-card-group">-->
-    <!--<div class="zr-card">-->
-        <!--<div class="zr-card-content">-->
+<!--<div class="nv-card-group">-->
+    <!--<div class="nv-card">-->
+        <!--<div class="nv-card-content">-->
             <!--Content-->
         <!--</div>-->
     <!--</div>-->
-    <!--<div class="zr-card">-->
-        <!--<div class="zr-card-content">-->
+    <!--<div class="nv-card">-->
+        <!--<div class="nv-card-content">-->
             <!--Content-->
         <!--</div>-->
     <!--</div>-->
-    <!--<div class="zr-card">-->
-        <!--<div class="zr-card-content">-->
+    <!--<div class="nv-card">-->
+        <!--<div class="nv-card-content">-->
             <!--Content-->
         <!--</div>-->
     <!--</div>-->
-    <!--<div class="zr-card">-->
-        <!--<div class="zr-card-content">-->
+    <!--<div class="nv-card">-->
+        <!--<div class="nv-card-content">-->
             <!--Content-->
         <!--</div>-->
     <!--</div>-->
-    <!--<div class="zr-card">-->
-        <!--<div class="zr-card-content">-->
+    <!--<div class="nv-card">-->
+        <!--<div class="nv-card-content">-->
             <!--Content-->
         <!--</div>-->
     <!--</div>-->
-    <!--<div class="zr-card">-->
-        <!--<div class="zr-card-content">-->
+    <!--<div class="nv-card">-->
+        <!--<div class="nv-card-content">-->
             <!--Content-->
         <!--</div>-->
     <!--</div>-->
-    <!--<div class="zr-card">-->
-        <!--<div class="zr-card-content">-->
+    <!--<div class="nv-card">-->
+        <!--<div class="nv-card-content">-->
             <!--Content-->
         <!--</div>-->
     <!--</div>-->
-    <!--<div class="zr-card">-->
-        <!--<div class="zr-card-content">-->
+    <!--<div class="nv-card">-->
+        <!--<div class="nv-card-content">-->
             <!--Content-->
         <!--</div>-->
     <!--</div>-->
 <!--</div>-->
         <!--</div>-->
-        <!--<a href="javascript:void(0);" class="c-toggle"><span>显示代码</span><i class="zricon-arrow-down"></i></a>-->
+        <!--<a href="javascript:void(0);" class="c-toggle"><span>显示代码</span><i class="nvicon-arrow-down"></i></a>-->
     <!--</section>-->
 
     <div class="c-block-50"></div>
@@ -349,20 +350,20 @@
         <div class="c-code-switch">&lt;code&gt;</div>
         <div class="c-demo">
             <div style="width: 200px">
-                <div class="zr-card zr-card-pic">
-                    <div class="zr-card-img">
-                        <img src="http://storage.jd.com/zrstatic/design/pic.jpg" alt="">
+                <div class="nv-card nv-card-pic">
+                    <div class="nv-card-img">
+                        <img src="http://storage.jd.com/nvstatic/design/pic.jpg" alt="">
                     </div>
-                    <div class="zr-card-title">
+                    <div class="nv-card-title">
                         <span>Title</span>
                     </div>
-                    <div class="zr-card-content">
-                        <div class="zr-card-left">
+                    <div class="nv-card-content">
+                        <div class="nv-card-left">
                             <ul>
                                 <li>This is content</li>
                             </ul>
                         </div>
-                        <div class="zr-card-right">
+                        <div class="nv-card-right">
                             <a href="#">More</a>
                         </div>
                     </div>
@@ -370,39 +371,39 @@
             </div>
         </div>
         <div class="c-code-inner c-code-hide">
-<div class="zr-card zr-card-pic">
-    <div class="zr-card-img">
-        <img src="http://storage.jd.com/zrstatic/design/pic.jpg" alt="">
+<div class="nv-card nv-card-pic">
+    <div class="nv-card-img">
+        <img src="http://storage.jd.com/nvstatic/design/pic.jpg" alt="">
     </div>
-    <div class="zr-card-title">
+    <div class="nv-card-title">
         <span>Title</span>
     </div>
-    <div class="zr-card-content">
-        <div class="zr-card-left">
+    <div class="nv-card-content">
+        <div class="nv-card-left">
             <ul>
                 <li>This is content</li>
             </ul>
         </div>
-        <div class="zr-card-right">
+        <div class="nv-card-right">
             <a href="#">More</a>
         </div>
     </div>
 </div>
         </div>
-        <a href="javascript:void(0);" class="c-toggle"><span>显示代码</span><i class="zricon-arrow-down"></i></a>
+        <a href="javascript:void(0);" class="c-toggle"><span>显示代码</span><i class="nvicon-arrow-down"></i></a>
     </section>
 </article>
 <!--注意此段js必须第一引入在开发模式下{-->
 <script type="text/javascript" src="js/input.js"></script>
 <script type="text/javascript" src="js/select.js"></script>
-<script type="text/javascript" src="/js/zr.min.js?3"></script>
+<script type="text/javascript" src="/js/nv.min.js?3"></script>
 <script type="text/javascript">
-	Zr.config({
+	Nv.config({
 		baseUrl: "/js/plugin_modules/"
 	})
-	Zr.ready(function () {
-		Zr.use("./js/quickMenu", "./js/code",function (zr) {
-			zr.dom.dispatch();
+	Nv.ready(function () {
+		Nv.use("./js/quickMenu", "./js/code",function (nv) {
+			nv.dom.dispatch();
 		})
 	})
 </script>
