--- a/examples/checkbox.html
+++ b/examples/checkbox.html
@@ -124,7 +124,7 @@
         <div class="c-block-50"></div>
         <section class="c-sub-title">
             <p>自定义事件<a href="#">#</a></p>
-            <span>checkbox内置了一个名为zronchange的事件，只需要调用该事件就可以动态配置checkbox的选中和禁用状态（主要用于渲染完成之后动态改变checkbox的选中和禁用状态）</span>
+            <span>checkbox内置了一个名为nvonchange的事件，只需要调用该事件就可以动态配置checkbox的选中和禁用状态（主要用于渲染完成之后动态改变checkbox的选中和禁用状态）</span>
         </section>
         <section class="c-code">
             <!--switch code show or hide-->
