--- a/examples/design/color.html
+++ b/examples/design/color.html
@@ -6,14 +6,14 @@
     <link type="text/css" rel="stylesheet" href="/frontPage/css/content.min.css?11" />
     <!--注意此段js必须第一引入在开发模式下{-->
     <!--}-->
-    <script type="text/javascript" src="/js/zr.min.js?1"></script>
+    <script type="text/javascript" src="/js/nv.min.js?1"></script>
     <script type="text/javascript">
-		Zr.config({
+		Nv.config({
 			baseUrl:"/js/plugin_modules/",
 			requestTime:true
 		})
-		Zr.ready(function(){
-			Zr.use("./js/quickMenu","./js/code")
+		Nv.ready(function(){
+			Nv.use("./js/quickMenu","./js/code")
 		})
     </script>
     <style type="text/css">
@@ -253,7 +253,7 @@
             <div>在我们的色板算法中，每一种颜色都将衍生出10个色阶，而每一种色阶都可以定义它所对应的状态，主要的使用如下图所示。</div>
             <div class="c-img">
                 <div>
-                    <img src="//storage.jd.com/zrstatic/design/desgin-color-01.jpg" alt="">
+                    <img src="//storage.jd.com/nvstatic/design/desgin-color-01.jpg" alt="">
                 </div>
             </div>
             <div class="c-title-4">颜色规范示例</div>
