--- a/examples/design/font.html
+++ b/examples/design/font.html
@@ -6,14 +6,14 @@
     <link type="text/css" rel="stylesheet" href="/frontPage/css/content.min.css?11" />
     <!--注意此段js必须第一引入在开发模式下{-->
     <!--}-->
-    <script type="text/javascript" src="/js/zr.min.js?1"></script>
+    <script type="text/javascript" src="/js/nv.min.js?1"></script>
     <script type="text/javascript">
-		Zr.config({
+		Nv.config({
 			baseUrl:"/js/plugin_modules/",
 			requestTime:true
 		})
-		Zr.ready(function(){
-			Zr.use("./js/quickMenu","./js/code")
+		Nv.ready(function(){
+			Nv.use("./js/quickMenu","./js/code")
 		})
     </script>
 </head>
@@ -32,7 +32,7 @@
             <div>默认字号为14px</div>
             <div class="c-img">
                 <div>
-                    <img src="//storage.jd.com/zrstatic/design/design-12-01.jpg" alt="">
+                    <img src="//storage.jd.com/nvstatic/design/design-12-01.jpg" alt="">
                 </div>
             </div>
         </span>
@@ -45,13 +45,13 @@
 字符高度的1.5倍是恰到好处的。</div>
             <div class="c-img c-img">
                 <div>
-                    <img src="//storage.jd.com/zrstatic/design/design-12-02.jpg" alt="">
+                    <img src="//storage.jd.com/nvstatic/design/design-12-02.jpg" alt="">
                 </div>
                 <div class="c-title-4">不同行高对比示例</div>
             </div>
             <div class="c-img c-img">
                 <div>
-                    <img src="//storage.jd.com/zrstatic/design/design-12-03.jpg" alt="">
+                    <img src="//storage.jd.com/nvstatic/design/design-12-03.jpg" alt="">
                 </div>
                 <div class="c-title-4">行高示例</div>
                 <div class="c-title-5">行高计算公式：行高=字体高度*1.5。</div>
@@ -64,24 +64,24 @@
         <span>
             <div>字重的存在增强了字体的适用性，一种字体可能用在标题、段落或者是说明性文字，单一的字重可能并不会很好的适应这些。<br>一般情况，只出现 regular 以及Bold的两种字体重量，分别对应代码中的 400 和 600。</div>
             <span class="img-wrap">
-                <div class="zr-col-8">
+                <div class="nv-col-8">
                     <div class="c-img c-img-4">
                         <div>
-                            <img src="//storage.jd.com/zrstatic/design/design-12-04.jpg" alt="">
+                            <img src="//storage.jd.com/nvstatic/design/design-12-04.jpg" alt="">
                         </div>
                     </div>
                 </div>
-                <div class="zr-col-8">
+                <div class="nv-col-8">
                     <div class="c-img c-img-4">
                         <div>
-                            <img src="//storage.jd.com/zrstatic/design/design-12-05.jpg" alt="">
+                            <img src="//storage.jd.com/nvstatic/design/design-12-05.jpg" alt="">
                         </div>
                     </div>
                 </div>
-                <div class="zr-col-8">
+                <div class="nv-col-8">
                     <div class="c-img c-img-4">
                         <div>
-                            <img src="//storage.jd.com/zrstatic/design/design-12-06.jpg" alt="">
+                            <img src="//storage.jd.com/nvstatic/design/design-12-06.jpg" alt="">
                         </div>
                     </div>
                 </div>
@@ -98,13 +98,13 @@
             <div>文字应保持最小对比度至少为4.5：1，比例为7：1是优选的。</div>
             <div class="c-img">
                 <div>
-                    <img src="//storage.jd.com/zrstatic/design/design-12-07.jpg" alt="">
+                    <img src="//storage.jd.com/nvstatic/design/design-12-07.jpg" alt="">
                 </div>
             </div>
             <div class="c-title-4">浅色背景以及深色背景字体颜色示例。</div>
             <div class="c-img">
                 <div>
-                    <img src="//storage.jd.com/zrstatic/design/design-12-08.jpg" alt="">
+                    <img src="//storage.jd.com/nvstatic/design/design-12-08.jpg" alt="">
                 </div>
             </div>
         </span>
