--- a/examples/design/即时满足.html
+++ b/examples/design/即时满足.html
@@ -6,14 +6,14 @@
     <link type="text/css" rel="stylesheet" href="/frontPage/css/content.min.css?11" />
     <!--注意此段js必须第一引入在开发模式下{-->
     <!--}-->
-    <script type="text/javascript" src="/js/zr.min.js?1"></script>
+    <script type="text/javascript" src="/js/nv.min.js?1"></script>
     <script type="text/javascript">
-		Zr.config({
+		Nv.config({
 			baseUrl:"/js/plugin_modules/",
 			requestTime:true
 		})
-		Zr.ready(function(){
-			Zr.use("./js/quickMenu","./js/code")
+		Nv.ready(function(){
+			Nv.use("./js/quickMenu","./js/code")
 		})
     </script>
 </head>
@@ -40,20 +40,20 @@
                 <li><div>页内编辑最直接的形式，就是在页面的上下文中编辑。首先，用户不会离开页面，其次，就是在页面中直接编辑。页内编辑的优点是不脱离上下文。在编辑的同时不断参照页面中其余内容，对用户来说经常是必要的。</div></li>
                 <li><div>如果易读性比易编辑性更重要，则应该在用户与内容交互时再给出编辑的提示。</div></li>
             </ul>
-            <div class="zr-col-12">
+            <div class="nv-col-12">
                 <div class="c-img">
                     <div>
-                        <img src="//storage.jd.com/zrstatic/design/design-01-01.png" alt="">
+                        <img src="//storage.jd.com/nvstatic/design/design-01-01.png" alt="">
                     </div>
                     <div class="c-title-4">文字链编辑示例</div>
                     <div class="c-title-5">步骤1：可编辑行出现文字链；</div>
                     <div class="c-title-5">步骤2：鼠标点击文字链后，出现输入框以及确认、取消按钮，同时光标定位在输入框中。</div>
                 </div>
             </div>
-            <div class="zr-col-12">
+            <div class="nv-col-12">
                 <div class="c-img">
                     <div>
-                        <img src="//storage.jd.com/zrstatic/design/design-01-02.png" alt="">
+                        <img src="//storage.jd.com/nvstatic/design/design-01-02.png" alt="">
                     </div>
                     <div class="c-title-4">单击编辑示例 </div>
                     <div class="c-title-5">步骤1：默认浏览样式，无编辑和不可编辑状态；</div>
@@ -70,7 +70,7 @@
             <div>表格形式首要考虑的还是外观的展现。编辑功能是次之。</div>
             <div class="c-img">
                 <div>
-                    <img src="//storage.jd.com/zrstatic/design/design-02.png" alt="">
+                    <img src="//storage.jd.com/nvstatic/design/design-02.png" alt="">
                 </div>
                 <div class="c-title-4">表格编辑示例 </div>
                 <div class="c-title-5">步骤1：可编辑行出现文字链；</div>
@@ -90,18 +90,18 @@
         <p>实时搜索</p>
         <span>
             <div>能够在输入查询条件的同时看到根据上下文实时显示的结果，对查找信息的用户是一种非常便捷的体验。帮助用户缩小查找范围，提示相应的搜索结果。</div>
-            <div class="zr-col-12">
+            <div class="nv-col-12">
                 <div class="c-img">
                     <div>
-                        <img src="//storage.jd.com/zrstatic/design/design-03-01.png" alt="">
+                        <img src="//storage.jd.com/nvstatic/design/design-03-01.png" alt="">
                     </div>
                     <div class="c-title-4">不确定分类示例</div>
                 </div>
             </div>
-            <div class="zr-col-12">
+            <div class="nv-col-12">
                 <div class="c-img">
                     <div>
-                        <img src="//storage.jd.com/zrstatic/design/design-03-02.png" alt="">
+                        <img src="//storage.jd.com/nvstatic/design/design-03-02.png" alt="">
                     </div>
                     <div class="c-title-4">确定分类示例 </div>
                 </div>
@@ -125,7 +125,7 @@
         <span>
             <div class="c-img">
                 <div>
-                    <img src="//storage.jd.com/zrstatic/design/design-04.png" alt="">
+                    <img src="//storage.jd.com/nvstatic/design/design-04.png" alt="">
                 </div>
             </div>
         </span>
