--- a/examples/design/反馈.html
+++ b/examples/design/反馈.html
@@ -6,14 +6,14 @@
     <link type="text/css" rel="stylesheet" href="/frontPage/css/content.min.css?11" />
     <!--注意此段js必须第一引入在开发模式下{-->
     <!--}-->
-    <script type="text/javascript" src="/js/zr.min.js?1"></script>
+    <script type="text/javascript" src="/js/nv.min.js?1"></script>
     <script type="text/javascript">
-		Zr.config({
+		Nv.config({
 			baseUrl:"/js/plugin_modules/",
 			requestTime:true
 		})
-		Zr.ready(function(){
-			Zr.use("./js/quickMenu","./js/code")
+		Nv.ready(function(){
+			Nv.use("./js/quickMenu","./js/code")
 		})
     </script>
 </head>
@@ -36,8 +36,8 @@
         <span>
             <div>能够在输入查询条件的同时看到根据上下文实时显示的结果，对查找信息的用户是一种非常便捷的体验。帮助用户缩小查找范围，提示相应的搜索结果。</div>
             <div class="c-img">
-                <div class=" zr-col-12">
-                    <img src="//storage.jd.com/zrstatic/design/design-15-01.png" alt="">
+                <div class=" nv-col-12">
+                    <img src="//storage.jd.com/nvstatic/design/design-15-01.png" alt="">
                 </div>
                 <div class="c-title-4">实时搜索示例</div>
             </div>
@@ -49,8 +49,8 @@
         <span>
             <div>在提交表单进行验证，给出用户输入的信息是否正确的即时反馈，防止出错。</div>
             <div class="c-img">
-                <div class="zr-col-12">
-                    <img src="//storage.jd.com/zrstatic/design/design-15-02.png" alt="">
+                <div class="nv-col-12">
+                    <img src="//storage.jd.com/nvstatic/design/design-15-02.png" alt="">
                 </div>
             </div>
         </span>
@@ -62,8 +62,8 @@
             <div>能对任务进行分解，使用渐进式设计把较为复杂的过程变得更为轻巧，最好是在必要时再给出提示，而不是一股脑显示出所有提示，导致界面混乱。</div>
             <div class="c-img">
                 <div>
-                    <!--<img src="http://storage.jd.com/zrstatic/design/design-15-03.png" alt="">-->
-                    <video src="//storage.jd.com/zrstatic/design/desgin-video-02.mp4" controls></video>
+                    <!--<img src="http://storage.jd.com/nvstatic/design/design-15-03.png" alt="">-->
+                    <video src="//storage.jd.com/nvstatic/design/desgin-video-02.mp4" controls></video>
                 </div>
                 <div class="c-title-4">渐进式设计示例</div>
                 <div class="c-title-6">步骤1.用户点击输入框获取焦点后再给出更多填写信息，避免显示所有信息干扰用户。<br>步骤2.显示出填写信用卡卡号的所有信息</div>
@@ -77,7 +77,7 @@
             <div>在需要等待一段时间才能完成的操作中为用户显示该操作的当前进度，让用户直观的看到当前的进度和状态的反馈，明确告知加载的状态或加载进度条，会给用户增加信赖感。</div>
             <div class="c-img">
                 <div>
-                    <img src="//storage.jd.com/zrstatic/design/design-15-04.png" alt="">
+                    <img src="//storage.jd.com/nvstatic/design/design-15-04.png" alt="">
                 </div>
             </div>
         </span>
