--- a/examples/design/图标.html
+++ b/examples/design/图标.html
@@ -6,14 +6,14 @@
     <link type="text/css" rel="stylesheet" href="/frontPage/css/content.min.css?11" />
     <!--注意此段js必须第一引入在开发模式下{-->
     <!--}-->
-    <script type="text/javascript" src="/js/zr.min.js?1"></script>
+    <script type="text/javascript" src="/js/nv.min.js?1"></script>
     <script type="text/javascript">
-		Zr.config({
+		Nv.config({
 			baseUrl:"/js/plugin_modules/",
 			requestTime:true
 		})
-		Zr.ready(function(){
-			Zr.use("./js/quickMenu","./js/code")
+		Nv.ready(function(){
+			Nv.use("./js/quickMenu","./js/code")
 		})
     </script>
 </head>
@@ -45,7 +45,7 @@
             <div>图标系列应该在大小上视觉上一致。如果个别图标设计的重量有所不同，某些图标可能需要比其他图标略大一些才能达到此效果。</div>
             <div class="c-img">
                 <div>
-                    <img src="//storage.jd.com/zrstatic/design/design-11-01.jpg" alt="">
+                    <img src="//storage.jd.com/nvstatic/design/design-11-01.jpg" alt="">
                 </div>
             </div>
         </span>
@@ -58,7 +58,7 @@
 以24px*24px图标尺寸为基准，所有笔画宽度为2px，包括曲线，角度以及内部和外部笔划；圆角半径为2px。</div>
             <div class="c-img">
                 <div>
-                    <img src="//storage.jd.com/zrstatic/design/design-11-02.jpg" alt="">
+                    <img src="//storage.jd.com/nvstatic/design/design-11-02.jpg" alt="">
                 </div>
             </div>
         </span>
@@ -70,7 +70,7 @@
             <div>有一些细节比较复杂的图标，则需要一些微妙调整笔画的宽度以及圆角的半径以增加图标的易读性。</div><br>
             <div class="c-img c-img-2">
                 <div>
-                    <img src="//storage.jd.com/zrstatic/design/design-11-03.jpg" alt="">
+                    <img src="//storage.jd.com/nvstatic/design/design-11-03.jpg" alt="">
                 </div>
             </div>
         </span>
@@ -82,7 +82,7 @@
             <div>常用的图标尺寸有12px、14px、16px、18px、24px、32px。</div>
             <div class="c-img">
                 <div>
-                    <img src="//storage.jd.com/zrstatic/design/design-11-04.jpg" alt="">
+                    <img src="//storage.jd.com/nvstatic/design/design-11-04.jpg" alt="">
                 </div>
             </div>
         </span>
@@ -93,7 +93,7 @@
         <span>
             <div class="c-img c-img-3">
             <div>
-                <img src="//storage.jd.com/zrstatic/design/design-11-05.jpg" alt="">
+                <img src="//storage.jd.com/nvstatic/design/design-11-05.jpg" alt="">
             </div>
         </div>
         </span>
