--- a/examples/design/引导操作.html
+++ b/examples/design/引导操作.html
@@ -6,14 +6,14 @@
     <link type="text/css" rel="stylesheet" href="/frontPage/css/content.min.css?11"/>
     <!--注意此段js必须第一引入在开发模式下{-->
     <!--}-->
-    <script type="text/javascript" src="/js/zr.min.js?1"></script>
+    <script type="text/javascript" src="/js/nv.min.js?1"></script>
     <script type="text/javascript">
-        Zr.config({
+        Nv.config({
             baseUrl: "/js/plugin_modules/",
             requestTime: true
         })
-        Zr.ready(function () {
-            Zr.use("./js/quickMenu", "./js/code")
+        Nv.ready(function () {
+            Nv.use("./js/quickMenu", "./js/code")
         })
     </script>
 </head>
@@ -36,7 +36,7 @@
         <span>
             <div class="c-img c-img-3">
                 <div>
-                    <img src="http://storage.jd.com/zrstatic/design/design-16-01.png" alt="">
+                    <img src="http://storage.jd.com/nvstatic/design/design-16-01.png" alt="">
                 </div>
                 <div class="c-title-4">步骤条示例</div>
                 <div class="c-title-6">针对简单的步骤条使用引导操作流程。</div>
@@ -49,7 +49,7 @@
         <span>
             <div class="c-img c-img-3">
                 <div>
-                    <img src="http://storage.jd.com/zrstatic/design/design-16-02.png" alt="">
+                    <img src="http://storage.jd.com/nvstatic/design/design-16-02.png" alt="">
                 </div>
                 <div class="c-title-4">手势指引示例</div>
                 <div class="c-title-6">步骤1.当鼠标位于可推动（内容项）上方时，鼠标变成小手状，并该（内容项）会突出显示，表示可以“脱离”页面<br>步骤2.拖拽时，鼠标变为十字符号</div>
@@ -65,19 +65,19 @@
         <p>查看更多内容 <a href="#">#</a></p>
         <span>
             <div>有两种形式：1.鼠标悬停显示内容；2.给出表示还有更多内容的提示信息，提示用户在可见区域后还有更多内容。<br>这两种形式都是引导用户顺利进入下一个交互层次的有效方式。</div>
-            <div class="zr-col-12">
+            <div class="nv-col-12">
                 <div class="c-img">
                     <div>
-                        <img src="http://storage.jd.com/zrstatic/design/design-16-03.png" alt="">
+                        <img src="http://storage.jd.com/nvstatic/design/design-16-03.png" alt="">
                     </div>
                     <div class="c-title-4">鼠标悬停显示内容</div>
                     <div class="c-title-5">通常用来显示完整信息、注释信息、辅助提示。</div>
                 </div>
             </div>
-            <div class="zr-col-12">
+            <div class="nv-col-12">
                 <div class="c-img">
                     <div>
-                        <img src="//storage.jd.com/zrstatic/design/design-16-04.png" alt="">
+                        <img src="//storage.jd.com/nvstatic/design/design-16-04.png" alt="">
                     </div>
                     <div class="c-title-4">点击“更多”，查看全部内容</div>
                 </div>
