--- a/examples/design/整体性原则.html
+++ b/examples/design/整体性原则.html
@@ -6,14 +6,14 @@
     <link type="text/css" rel="stylesheet" href="/frontPage/css/content.min.css?11" />
     <!--注意此段js必须第一引入在开发模式下{-->
     <!--}-->
-    <script type="text/javascript" src="/js/zr.min.js?1"></script>
+    <script type="text/javascript" src="/js/nv.min.js?1"></script>
     <script type="text/javascript">
-		Zr.config({
+		Nv.config({
 			baseUrl:"/js/plugin_modules/",
 			requestTime:true
 		})
-		Zr.ready(function(){
-			Zr.use("./js/quickMenu","./js/code")
+		Nv.ready(function(){
+			Nv.use("./js/quickMenu","./js/code")
 		})
     </script>
 </head>
@@ -37,18 +37,18 @@
             </ul>
         </span>
         <span>
-            <div class="zr-col-12">
+            <div class="nv-col-12">
                 <div class="c-img">
                     <div>
-                        <img src="//storage.jd.com/zrstatic/design/design-05-01.png" alt="">
+                        <img src="//storage.jd.com/nvstatic/design/design-05-01.png" alt="">
                     </div>
                     <div class="c-title-4">示例1. 按钮距离表格的位置更近，因此与表格的关联性更强</div>
                 </div>
             </div>
-            <div class="zr-col-12">
+            <div class="nv-col-12">
                 <div class="c-img">
                     <div>
-                        <img src="//storage.jd.com/zrstatic/design/design-05-02.png" alt="">
+                        <img src="//storage.jd.com/nvstatic/design/design-05-02.png" alt="">
                     </div>
                     <div class="c-title-4">示例2. 按钮距离查询条件的位置更近，因此与查询条件的关联性更强 </div>
                 </div>
@@ -77,26 +77,26 @@
             </ul>
         </span>
         <span>
-            <div class="zr-col-12">
+            <div class="nv-col-12">
                 <div class="c-img">
                     <div>
-                        <img src="//storage.jd.com/zrstatic/design/design-06-01.png" alt="">
+                        <img src="//storage.jd.com/nvstatic/design/design-06-01.png" alt="">
                     </div>
                     <div class="c-icon-yes">
-                        <i class="zricon-ok-circle"></i>
+                        <i class="nvicon-ok-circle"></i>
                         <span>Do</span>
                     </div>
                     <div class="c-title-4">icon的大小、颜色、样式保持统一</div>
                     <div class="c-title-4">文字的字体、字号、颜色保持统一</div>
                 </div>
             </div>
-            <div class="zr-col-12">
+            <div class="nv-col-12">
                 <div class="c-img">
                     <div>
-                        <img src="//storage.jd.com/zrstatic/design/design-06-02.png" alt="">
+                        <img src="//storage.jd.com/nvstatic/design/design-06-02.png" alt="">
                     </div>
                      <div class="c-icon-no">
-                        <i class="zricon-close-circle"></i>
+                        <i class="nvicon-close-circle"></i>
                         <span>Don't</span>
                     </div>
                     <div class="c-title-4">icon的大小、颜色、样式不统一</div>
@@ -117,24 +117,24 @@
         <p>文案类对齐 <a href="#">#</a></p>
         <span>
             <div>找到一条明确的对齐线，并以它为基准对齐，这样有助于更清晰的展示信息。</div>
-            <div class="zr-col-12">
+            <div class="nv-col-12">
                 <div class="c-img">
                     <div>
-                        <img src="//storage.jd.com/zrstatic/design/design-07-01.png" alt="">
+                        <img src="//storage.jd.com/nvstatic/design/design-07-01.png" alt="">
                     </div>
                     <div class="c-icon-yes">
-                        <i class="zricon-ok-circle"></i>
+                        <i class="nvicon-ok-circle"></i>
                         <span>Do</span>
                     </div>
                 </div>
             </div>
-            <div class="zr-col-12">
+            <div class="nv-col-12">
                 <div class="c-img">
                     <div>
-                        <img src="//storage.jd.com/zrstatic/design/design-07-02.png" alt="">
+                        <img src="//storage.jd.com/nvstatic/design/design-07-02.png" alt="">
                     </div>
                      <div class="c-icon-no">
-                        <i class="zricon-close-circle"></i>
+                        <i class="nvicon-close-circle"></i>
                         <span>Don't</span>
                     </div>
                 </div>
@@ -146,24 +146,24 @@
         <p>表单类对齐 <a href="#">#</a></p>
         <span>
             <div>表单类的对齐方式为右对齐（冒号对齐）。</div>
-            <div class="zr-col-12">
+            <div class="nv-col-12">
                 <div class="c-img">
                     <div>
-                        <img src="//storage.jd.com/zrstatic/design/design-08-01.png" alt="">
+                        <img src="//storage.jd.com/nvstatic/design/design-08-01.png" alt="">
                     </div>
                     <div class="c-icon-yes">
-                        <i class="zricon-ok-circle"></i>
+                        <i class="nvicon-ok-circle"></i>
                         <span>Do</span>
                     </div>
                 </div>
             </div>
-            <div class="zr-col-12">
+            <div class="nv-col-12">
                 <div class="c-img">
                     <div>
-                        <img src="//storage.jd.com/zrstatic/design/design-08-02.png" alt="">
+                        <img src="//storage.jd.com/nvstatic/design/design-08-02.png" alt="">
                     </div>
                      <div class="c-icon-no">
-                        <i class="zricon-close-circle"></i>
+                        <i class="nvicon-close-circle"></i>
                         <span>Don't</span>
                     </div>
                 </div>
@@ -175,24 +175,24 @@
         <p>表格类对齐 <a href="#">#</a></p>
         <span>
             <div>表头内容以及行内容为左对齐，数字类信息为右对齐（具体规则详见数字类对齐）。</div>
-            <div class="zr-col-12">
+            <div class="nv-col-12">
                 <div class="c-img">
                     <div>
-                        <img src="//storage.jd.com/zrstatic/design/design-09-01.png" alt="">
+                        <img src="//storage.jd.com/nvstatic/design/design-09-01.png" alt="">
                     </div>
                     <div class="c-icon-yes">
-                        <i class="zricon-ok-circle"></i>
+                        <i class="nvicon-ok-circle"></i>
                         <span>Do</span>
                     </div>
                 </div>
             </div>
-            <div class="zr-col-12">
+            <div class="nv-col-12">
                 <div class="c-img">
                     <div>
-                        <img src="//storage.jd.com/zrstatic/design/design-09-02.png" alt="">
+                        <img src="//storage.jd.com/nvstatic/design/design-09-02.png" alt="">
                     </div>
                      <div class="c-icon-no">
-                        <i class="zricon-close-circle"></i>
+                        <i class="nvicon-close-circle"></i>
                         <span>Don't</span>
                     </div>
                 </div>
@@ -204,18 +204,18 @@
         <p>数字类对齐 <a href="#">#</a></p>
         <span>
             <div>为了快速对比数值大小，建议所有数值的小数位个数相同（建议保留小数点后两位），并且右对齐。</div>
-            <div class="zr-col-12">
+            <div class="nv-col-12">
                 <div class="c-img">
                     <div>
-                        <img src="//storage.jd.com/zrstatic/design/design-10-01.png" alt="">
+                        <img src="//storage.jd.com/nvstatic/design/design-10-01.png" alt="">
                     </div>
                     <div class="c-title-4">示例1. 数字类右对齐</div>
                 </div>
             </div>
-            <div class="zr-col-12">
+            <div class="nv-col-12">
                 <div class="c-img">
                     <div>
-                        <img src="//storage.jd.com/zrstatic/design/design-10-02.png" alt="">
+                        <img src="//storage.jd.com/nvstatic/design/design-10-02.png" alt="">
                     </div>
                     <div class="c-title-4">示例2. 表格内的数字右对齐</div>
                 </div>
