--- a/examples/design/沉浸体验.html
+++ b/examples/design/沉浸体验.html
@@ -6,14 +6,14 @@
     <link type="text/css" rel="stylesheet" href="/frontPage/css/content.min.css?11" />
     <!--注意此段js必须第一引入在开发模式下{-->
     <!--}-->
-    <script type="text/javascript" src="/js/zr.min.js?1"></script>
+    <script type="text/javascript" src="/js/nv.min.js?1"></script>
     <script type="text/javascript">
-		Zr.config({
+		Nv.config({
 			baseUrl:"/js/plugin_modules/",
 			requestTime:true
 		})
-		Zr.ready(function(){
-			Zr.use("./js/quickMenu","./js/code")
+		Nv.ready(function(){
+			Nv.use("./js/quickMenu","./js/code")
 		})
     </script>
 </head>
@@ -38,7 +38,7 @@
         <span>
             <div class="c-img c-img-3">
                 <div>
-                    <img src="//storage.jd.com/zrstatic/design/design-14-01.png" alt="">
+                    <img src="//storage.jd.com/nvstatic/design/design-14-01.png" alt="">
                 </div>
                 <div class="c-title-4">非模态对话框示例</div>
                 <div class="c-title-5">默认3s消失，可自定义时长。不要超过15个字</div>
@@ -54,7 +54,7 @@
             </div>
             <div class="c-img">
                 <div>
-                    <img src="//storage.jd.com/zrstatic/design/design-14-02.png" alt="">
+                    <img src="//storage.jd.com/nvstatic/design/design-14-02.png" alt="">
                 </div>
                 <div class="c-title-4">模态对话框示例</div>
             </div>
@@ -67,7 +67,7 @@
             <div>为用户提供了附加信息，辅助用户决策接下来怎么做，换而言之，能让用户获得满足感和支配感，提高用户体验必要因素。</div>
             <div class="c-img">
                 <div>
-                    <img src="//storage.jd.com/zrstatic/design/design-14-03.png" alt="">
+                    <img src="//storage.jd.com/nvstatic/design/design-14-03.png" alt="">
                 </div>
                 <div class="c-title-4">悬浮提示框示例</div>
                 <div class="c-title-6">当用户把鼠标悬浮在某处内容上时，显示更多的信息，移出内容区后，悬浮窗立即消失</div>
@@ -81,8 +81,8 @@
             <div>无论把弹框放在哪里，都会遮挡下方的信息。而嵌入层通过把内容直接插入到页面的上下文中解决了这个问题。可以为用户提供位于上下文的对话框。</div>
            <div class="c-img">
                 <div>
-                    <!--<img src="//storage.jd.com/zrstatic/design/design-14-04.png" alt="">-->
-                    <video src="//storage.jd.com/zrstatic/design/desgin-video-03.mp4" controls></video>
+                    <!--<img src="//storage.jd.com/nvstatic/design/design-14-04.png" alt="">-->
+                    <video src="//storage.jd.com/nvstatic/design/desgin-video-03.mp4" controls></video>
                 </div>
                 <div class="c-title-4">列表嵌入层示例</div>
                 <div class="c-title-6">位于上下文中，用户不必切换到另一个页面去操作，通过嵌入层直接修改并查看结果。<br>每个窗格的内容互不依赖，每次只需显示一个窗格，每个窗格都可以从逻辑上分成不同主题。，显示更多的信息，移出内容区后，悬浮窗立即消失</div>
@@ -96,7 +96,7 @@
             <div>一种可以跟随滑动的标签，当页面元素过多时，可加入快速定位功能帮助用户快速跳转到指定位置，并能随时告知用户所在的位置。</div>
            <div class="c-img">
                 <div>
-                    <img src="//storage.jd.com/zrstatic/design/design-14-05.png" alt="">
+                    <img src="//storage.jd.com/nvstatic/design/design-14-05.png" alt="">
                 </div>
                 <div class="c-title-4">锚点示例</div>
                 <div class="c-title-6">避免一个页面上使用多组标签页。可把重要的内容放在第一个标签中，许多用户可能不会查看其它的标签页。</div>
@@ -110,7 +110,7 @@
             <div>分页是分割信息最方便最自然的方式。<br>为了让分页看起来不像页面切换，可以在切换内容的同时保持页面其他部分的稳定。分页不会导致页面刷新，而只会更新结果区域。保持上下文稳定能够创建更好的心流体验。</div>
            <div class="c-img">
                 <div>
-                    <img src="//storage.jd.com/zrstatic/design/design-14-06.png" alt="">
+                    <img src="//storage.jd.com/nvstatic/design/design-14-06.png" alt="">
                 </div>
                 <div class="c-title-4">分页示例</div>
                 <div class="c-title-6">如果内容实际上具有连续性，滚动比分页显得更自然。</div>
