--- a/examples/design/邮件模板.html
+++ b/examples/design/邮件模板.html
@@ -6,14 +6,14 @@
     <link type="text/css" rel="stylesheet" href="/frontPage/css/content.min.css?11" />
     <!--注意此段js必须第一引入在开发模式下{-->
     <!--}-->
-    <script type="text/javascript" src="/js/zr.min.js?1"></script>
+    <script type="text/javascript" src="/js/nv.min.js?1"></script>
     <script type="text/javascript">
-		Zr.config({
+		Nv.config({
 			baseUrl:"/js/plugin_modules/",
 			requestTime:true
 		})
-		Zr.ready(function(){
-			Zr.use("./js/quickMenu","./js/code")
+		Nv.ready(function(){
+			Nv.use("./js/quickMenu","./js/code")
 		})
     </script>
 </head>
@@ -37,12 +37,12 @@
             </ul>
         </span>
         <span>
-            <div class="zr-col-12">
+            <div class="nv-col-12">
                 <div class="c-img">
                     <div>
-                        <img src="http://storage.jd.com/zrstatic/template/img/email.png" alt="">
+                        <img src="http://storage.jd.com/nvstatic/template/img/email.png" alt="">
                     </div>
-                    <div class="c-title-4">示例1. <a href="http://storage.jd.com/zrstatic/template/html/email.html">请点我下载</a></div>
+                    <div class="c-title-4">示例1. <a href="http://storage.jd.com/nvstatic/template/html/email.html">请点我下载</a></div>
                 </div>
             </div>
             <div class="c-bdmsg">
@@ -70,20 +70,20 @@
             </ul>
         </span>
         <span>
-            <div class="zr-col-12">
+            <div class="nv-col-12">
                 <div class="c-img">
                     <div>
-                        <img src="http://storage.jd.com/zrstatic/template/img/edm-january.jpg" alt="">
+                        <img src="http://storage.jd.com/nvstatic/template/img/edm-january.jpg" alt="">
                     </div>
-                     <div class="c-title-4">示例1. <a href="http://storage.jd.com/zrstatic/template/html/EDM_January.html">请点我下载</a></div>
+                     <div class="c-title-4">示例1. <a href="http://storage.jd.com/nvstatic/template/html/EDM_January.html">请点我下载</a></div>
                 </div>
             </div>
-            <div class="zr-col-12">
+            <div class="nv-col-12">
                 <div class="c-img">
                     <div>
-                        <img src="http://storage.jd.com/zrstatic/template/img/EDM-March.jpg" alt="">
+                        <img src="http://storage.jd.com/nvstatic/template/img/EDM-March.jpg" alt="">
                     </div>
-                     <div class="c-title-4">示例2. <a href="http://storage.jd.com/zrstatic/template/html/EDM_March.html">请点我下载</a></div>
+                     <div class="c-title-4">示例2. <a href="http://storage.jd.com/nvstatic/template/html/EDM_March.html">请点我下载</a></div>
                 </div>
             </div>
         </span>
