--- a/examples/dropdown_zhuangying.html
+++ b/examples/dropdown_zhuangying.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <title>组件平台显示内容</title>
     <link type="text/css" rel="stylesheet" href="/frontPage/css/content.min.css"/>
-    <script type="text/javascript" src="/js/zr.min.js?1"></script>
+    <script type="text/javascript" src="/js/nv.min.js?1"></script>
     <script type="text/javascript">
-        Zr.config({
+        Nv.config({
             baseUrl: "/js/plugin_modules/"
         })
-        Zr.ready(function () {
-            Zr.use("./js/quickMenu", "./js/code")
+        Nv.ready(function () {
+            Nv.use("./js/quickMenu", "./js/code")
         })
     </script>
 </head>
@@ -39,22 +39,22 @@
         <!--switch code show or hide-->
         <div class="c-code-switch">&lt;code&gt;</div>
         <div class="c-demo">
-            <div class="zr-dropdown">
-                <div class="zr-dropdown-link">
-                    <a class="zr-dropdown-normal" href="#">Dropdown <i class="zricon-arrow-down"></i></a>
-                    <div class="zr-dropdown-location zr-dropdown-topLeft zr-dropdown-hidder">
-                        <ul class="zr-dropdown-menu">
-                            <li class="zr-dropdown-item">
+            <div class="nv-dropdown">
+                <div class="nv-dropdown-link">
+                    <a class="nv-dropdown-normal" href="#">Dropdown <i class="nvicon-arrow-down"></i></a>
+                    <div class="nv-dropdown-location nv-dropdown-topLeft nv-dropdown-hidder">
+                        <ul class="nv-dropdown-menu">
+                            <li class="nv-dropdown-item">
                                 <a target="_blank" href="#">Menu 1（normal）</a>
                             </li>
-                            <li class="zr-dropdown-item">
+                            <li class="nv-dropdown-item">
                                 <a target="_blank" href="#">Menu 2（normal）</a>
                             </li>
-                            <li class="zr-dropdown-item">
+                            <li class="nv-dropdown-item">
                                 <a class="disable" target="_blank" href="#">Menu 3（disable）</a>
                             </li>
-                            <li class="zr-dropdown-divider"></li>
-                            <li class="zr-dropdown-item">
+                            <li class="nv-dropdown-divider"></li>
+                            <li class="nv-dropdown-item">
                                 <a target="_blank" href="#">Menu 4（normal）</a>
                             </li>
                         </ul>
@@ -63,43 +63,43 @@
             </div>
         </div>
         <div class="c-code-inner">
-    <div class="zr-dropdown">
-        <div class="zr-dropdown-link">
-            <a class="zr-dropdown-normal" href="#">Dropdown <i class="zricon-arrow-down"></i></a>
-            <div class="zr-dropdown-location zr-dropdown-topLeft zr-dropdown-hidder">
-                <ul class="zr-dropdown-menu">
-                    <li class="zr-dropdown-item">
+    <div class="nv-dropdown">
+        <div class="nv-dropdown-link">
+            <a class="nv-dropdown-normal" href="#">Dropdown <i class="nvicon-arrow-down"></i></a>
+            <div class="nv-dropdown-location nv-dropdown-topLeft nv-dropdown-hidder">
+                <ul class="nv-dropdown-menu">
+                    <li class="nv-dropdown-item">
                         <a target="_blank" href="#">Menu 1（normal）</a>
                     </li>
-                    <li class="zr-dropdown-item">
+                    <li class="nv-dropdown-item">
                         <a target="_blank" href="#">Menu 2（normal）</a>
                     </li>
-                    <li class="zr-dropdown-item">
+                    <li class="nv-dropdown-item">
                         <a class="disable" target="_blank" href="#">Menu 3（disable）</a>
                     </li>
-                    <li class="zr-dropdown-divider"></li>
-                    <li class="zr-dropdown-item">
+                    <li class="nv-dropdown-divider"></li>
+                    <li class="nv-dropdown-item">
                         <a target="_blank" href="#">Menu 4（normal）</a>
                     </li>
                 </ul>
             </div>
         </div>
     </div>
-        <div class="zr-dropdown-link">
-            <a href="#">Dropdown <i class="zricon-arrow-down"></i></a>
-            <div class="zr-dropdown-location zr-dropdown-topLeft zr-dropdown-hidder">
-                <ul class="zr-dropdown-menu">
-                    <li class="zr-dropdown-item">
+        <div class="nv-dropdown-link">
+            <a href="#">Dropdown <i class="nvicon-arrow-down"></i></a>
+            <div class="nv-dropdown-location nv-dropdown-topLeft nv-dropdown-hidder">
+                <ul class="nv-dropdown-menu">
+                    <li class="nv-dropdown-item">
                         <a target="_blank" href="#">Menu 1（normal）</a>
                     </li>
-                    <li class="zr-dropdown-item">
+                    <li class="nv-dropdown-item">
                         <a target="_blank" href="#">Menu 2（normal）</a>
                     </li>
-                    <li class="zr-dropdown-item">
+                    <li class="nv-dropdown-item">
                         <a class="disable" target="_blank" href="#">Menu 3（disable）</a>
                     </li>
-                    <li class="zr-dropdown-divider"></li>
-                    <li class="zr-dropdown-item">
+                    <li class="nv-dropdown-divider"></li>
+                    <li class="nv-dropdown-item">
                         <a target="_blank" href="#">Menu 4（normal）</a>
                     </li>
                 </ul>
@@ -116,22 +116,22 @@
         <!--switch code show or hide-->
         <div class="c-code-switch">&lt;code&gt;</div>
         <div class="c-demo">
-            <div class="zr-dropdown">
-                <div class="zr-dropdown-link">
-                    <a class="zr-dropdown-normal" href="#">Click <i class="zricon-arrow-down"></i></a>
-                    <div class="zr-dropdown-location zr-dropdown-topLeft zr-dropdown-hidder">
-                        <ul class="zr-dropdown-menu">
-                            <li class="zr-dropdown-item">
+            <div class="nv-dropdown">
+                <div class="nv-dropdown-link">
+                    <a class="nv-dropdown-normal" href="#">Click <i class="nvicon-arrow-down"></i></a>
+                    <div class="nv-dropdown-location nv-dropdown-topLeft nv-dropdown-hidder">
+                        <ul class="nv-dropdown-menu">
+                            <li class="nv-dropdown-item">
                                 <a target="_blank" href="#">Menu 1（normal）</a>
                             </li>
-                            <li class="zr-dropdown-item">
+                            <li class="nv-dropdown-item">
                                 <a target="_blank" href="#">Menu 2（normal）</a>
                             </li>
-                            <li class="zr-dropdown-item">
+                            <li class="nv-dropdown-item">
                                 <a class="disable" target="_blank" href="#">Menu 3（disable）</a>
                             </li>
-                            <li class="zr-dropdown-divider"></li>
-                            <li class="zr-dropdown-item">
+                            <li class="nv-dropdown-divider"></li>
+                            <li class="nv-dropdown-item">
                                 <a target="_blank" href="#">Menu 4（normal）</a>
                             </li>
                         </ul>
@@ -140,22 +140,22 @@
             </div>
         </div>
         <div class="c-code-inner">
-    <div class="zr-dropdown">
-        <div class="zr-dropdown-link">
-            <a href="#">Click <i class="zricon-arrow-down"></i></a>
-            <div class="zr-dropdown-location zr-dropdown-topLeft zr-dropdown-hidder">
-                <ul class="zr-dropdown-menu">
-                    <li class="zr-dropdown-item">
+    <div class="nv-dropdown">
+        <div class="nv-dropdown-link">
+            <a href="#">Click <i class="nvicon-arrow-down"></i></a>
+            <div class="nv-dropdown-location nv-dropdown-topLeft nv-dropdown-hidder">
+                <ul class="nv-dropdown-menu">
+                    <li class="nv-dropdown-item">
                         <a target="_blank" href="#">Menu 1（normal）</a>
                     </li>
-                    <li class="zr-dropdown-item">
+                    <li class="nv-dropdown-item">
                         <a target="_blank" href="#">Menu 2（normal）</a>
                     </li>
-                    <li class="zr-dropdown-item">
+                    <li class="nv-dropdown-item">
                         <a class="disable" target="_blank" href="#">Menu 3（disable）</a>
                     </li>
-                    <li class="zr-dropdown-divider"></li>
-                    <li class="zr-dropdown-item">
+                    <li class="nv-dropdown-divider"></li>
+                    <li class="nv-dropdown-item">
                         <a target="_blank" href="#">Menu 4（normal）</a>
                     </li>
                 </ul>
@@ -174,42 +174,42 @@
         <!--switch code show or hide-->
         <div class="c-code-switch">&lt;code&gt;</div>
         <div class="c-demo">
-            <div class="zr-dropdown">
-                <div class="zr-dropdown-link zr-dropdown-border fl mr8">
-                    <a href="#">Hover <i class="zricon-arrow-down"></i></a>
-                    <div class="zr-dropdown-location zr-dropdown-topLeft zr-dropdown-hidder">
-                        <ul class="zr-dropdown-menu">
-                            <li class="zr-dropdown-item">
+            <div class="nv-dropdown">
+                <div class="nv-dropdown-link nv-dropdown-border fl mr8">
+                    <a href="#">Hover <i class="nvicon-arrow-down"></i></a>
+                    <div class="nv-dropdown-location nv-dropdown-topLeft nv-dropdown-hidder">
+                        <ul class="nv-dropdown-menu">
+                            <li class="nv-dropdown-item">
                                 <a target="_blank" href="#">Menu 1（normal）</a>
                             </li>
-                            <li class="zr-dropdown-item">
+                            <li class="nv-dropdown-item">
                                 <a target="_blank" href="#">Menu 2（normal）</a>
                             </li>
-                            <li class="zr-dropdown-item">
+                            <li class="nv-dropdown-item">
                                 <a class="disable" target="_blank" href="#">Menu 3（disable）</a>
                             </li>
-                            <li class="zr-dropdown-divider"></li>
-                            <li class="zr-dropdown-item">
+                            <li class="nv-dropdown-divider"></li>
+                            <li class="nv-dropdown-item">
                                 <a target="_blank" href="#">Menu 4（normal）</a>
                             </li>
                         </ul>
                     </div>
                 </div>
-                <div class="zr-dropdown-link zr-dropdown-border fl">
-                    <a href="#">Click <i class="zricon-arrow-down"></i></a>
-                    <div class="zr-dropdown-location zr-dropdown-topLeft zr-dropdown-hidder">
-                        <ul class="zr-dropdown-menu">
-                            <li class="zr-dropdown-item">
+                <div class="nv-dropdown-link nv-dropdown-border fl">
+                    <a href="#">Click <i class="nvicon-arrow-down"></i></a>
+                    <div class="nv-dropdown-location nv-dropdown-topLeft nv-dropdown-hidder">
+                        <ul class="nv-dropdown-menu">
+                            <li class="nv-dropdown-item">
                                 <a target="_blank" href="#">Menu 1（normal）</a>
                             </li>
-                            <li class="zr-dropdown-item">
+                            <li class="nv-dropdown-item">
                                 <a target="_blank" href="#">Menu 2（normal）</a>
                             </li>
-                            <li class="zr-dropdown-item">
+                            <li class="nv-dropdown-item">
                                 <a class="disable" target="_blank" href="#">Menu 3（disable）</a>
                             </li>
-                            <li class="zr-dropdown-divider"></li>
-                            <li class="zr-dropdown-item">
+                            <li class="nv-dropdown-divider"></li>
+                            <li class="nv-dropdown-item">
                                 <a target="_blank" href="#">Menu 4（normal）</a>
                             </li>
                         </ul>
@@ -231,59 +231,59 @@
         <!--switch code show or hide-->
         <div class="c-code-switch">&lt;code&gt;</div>
         <div class="c-demo">
-            <div class="zr-dropdown">
-                <div class="zr-dropdown-link zr-dropdown-border fl mr8">
-                    <a href="#">Dropdown Left <i class="zricon-arrow-down"></i></a>
-                    <div class="zr-dropdown-location zr-dropdown-topLeft zr-dropdown-hidder">
-                        <ul class="zr-dropdown-menu">
-                            <li class="zr-dropdown-item">
+            <div class="nv-dropdown">
+                <div class="nv-dropdown-link nv-dropdown-border fl mr8">
+                    <a href="#">Dropdown Left <i class="nvicon-arrow-down"></i></a>
+                    <div class="nv-dropdown-location nv-dropdown-topLeft nv-dropdown-hidder">
+                        <ul class="nv-dropdown-menu">
+                            <li class="nv-dropdown-item">
                                 <a target="_blank" href="#">Menu 1</a>
                             </li>
-                            <li class="zr-dropdown-item">
+                            <li class="nv-dropdown-item">
                                 <a target="_blank" href="#">Menu 2</a>
                             </li>
-                            <li class="zr-dropdown-item">
+                            <li class="nv-dropdown-item">
                                 <a target="_blank" href="#">Menu 3</a>
                             </li>
-                            <li class="zr-dropdown-item">
+                            <li class="nv-dropdown-item">
                                 <a target="_blank" href="#">Menu 4</a>
                             </li>
                         </ul>
                     </div>
                 </div>
-                <div class="zr-dropdown-link zr-dropdown-border fl mr8">
-                    <a href="#">Dropdown Center <i class="zricon-arrow-down"></i></a>
-                    <div class="zr-dropdown-location zr-dropdown-topCenter zr-dropdown-hidder">
-                        <ul class="zr-dropdown-menu">
-                            <li class="zr-dropdown-item">
+                <div class="nv-dropdown-link nv-dropdown-border fl mr8">
+                    <a href="#">Dropdown Center <i class="nvicon-arrow-down"></i></a>
+                    <div class="nv-dropdown-location nv-dropdown-topCenter nv-dropdown-hidder">
+                        <ul class="nv-dropdown-menu">
+                            <li class="nv-dropdown-item">
                                 <a target="_blank" href="#">Menu 1</a>
                             </li>
-                            <li class="zr-dropdown-item">
+                            <li class="nv-dropdown-item">
                                 <a target="_blank" href="#">Menu 2</a>
                             </li>
-                            <li class="zr-dropdown-item">
+                            <li class="nv-dropdown-item">
                                 <a target="_blank" href="#">Menu 3</a>
                             </li>
-                            <li class="zr-dropdown-item">
+                            <li class="nv-dropdown-item">
                                 <a target="_blank" href="#">Menu 4</a>
                             </li>
                         </ul>
                     </div>
                 </div>
-                <div class="zr-dropdown-link zr-dropdown-border fl">
-                    <a href="#">Dropdown Right <i class="zricon-arrow-down"></i></a>
-                    <div class="zr-dropdown-location zr-dropdown-topRight zr-dropdown-hidder">
-                        <ul class="zr-dropdown-menu">
-                            <li class="zr-dropdown-item">
+                <div class="nv-dropdown-link nv-dropdown-border fl">
+                    <a href="#">Dropdown Right <i class="nvicon-arrow-down"></i></a>
+                    <div class="nv-dropdown-location nv-dropdown-topRight nv-dropdown-hidder">
+                        <ul class="nv-dropdown-menu">
+                            <li class="nv-dropdown-item">
                                 <a target="_blank" href="#">Menu 1</a>
                             </li>
-                            <li class="zr-dropdown-item">
+                            <li class="nv-dropdown-item">
                                 <a target="_blank" href="#">Menu 2</a>
                             </li>
-                            <li class="zr-dropdown-item">
+                            <li class="nv-dropdown-item">
                                 <a target="_blank" href="#">Menu 3</a>
                             </li>
-                            <li class="zr-dropdown-item">
+                            <li class="nv-dropdown-item">
                                 <a target="_blank" href="#">Menu 4</a>
                             </li>
                         </ul>
@@ -305,21 +305,21 @@
         <!--switch code show or hide-->
         <div class="c-code-switch">&lt;code&gt;</div>
         <div class="c-demo">
-            <div class="zr-dropdown">
-                <div class="zr-dropdown-link zr-dropdown-border">
-                    <a href="#">Cascading Menu <i class="zricon-arrow-down"></i></a>
-                    <div class="zr-dropdown-location zr-dropdown-topCenter zr-dropdown-hidder">
-                        <ul class="zr-dropdown-menu">
-                            <li class="zr-dropdown-item">
+            <div class="nv-dropdown">
+                <div class="nv-dropdown-link nv-dropdown-border">
+                    <a href="#">Cascading Menu <i class="nvicon-arrow-down"></i></a>
+                    <div class="nv-dropdown-location nv-dropdown-topCenter nv-dropdown-hidder">
+                        <ul class="nv-dropdown-menu">
+                            <li class="nv-dropdown-item">
                                 <a target="_blank" href="#">Menu 1</a>
                             </li>
-                            <li class="zr-dropdown-item">
+                            <li class="nv-dropdown-item">
                                 <a target="_blank" href="#">Menu 2</a>
                             </li>
-                            <li class="zr-dropdown-item">
+                            <li class="nv-dropdown-item">
                                 <a target="_blank" href="#">Menu 3</a>
                             </li>
-                            <li class="zr-dropdown-item">
+                            <li class="nv-dropdown-item">
                                 <a target="_blank" href="#">Menu 4</a>
                             </li>
                         </ul>
