--- a/examples/select.html
+++ b/examples/select.html
@@ -26,14 +26,14 @@
     <div class="c-block-50"></div>
     <section class="c-sub-title">
         <p>基础样式 <a href="#">#</a></p>
-        <span>最基础的select选择器样式，只需增加样式  <i class="c-block-inline">zr-select</i>；select标签有  <i class="c-block-inline">disabled</i> 属性时会显示成禁用样式。</span>
+        <span>最基础的select选择器样式，只需增加样式  <i class="c-block-inline">nv-select</i>；select标签有  <i class="c-block-inline">disabled</i> 属性时会显示成禁用样式。</span>
     </section>
     <section class="c-code">
         <!--switch code show or hide-->
         <div class="c-code-switch">&lt;code&gt;</div>
         <div class="c-demo">
             <div style="width: 160px;display: inline-block;margin-right: 16px">
-                <select name="country" class="zr-select">
+                <select name="country" class="nv-select">
                     <option value="">请选择一个城市</option>
                     <option value="010">北京</option>
                     <option value="021">上海</option>
@@ -41,7 +41,7 @@
                 </select>
             </div>
             <div style="width: 160px;display: inline-block">
-                <select name="country" class="zr-select" disabled="disabled">
+                <select name="country" class="nv-select" disabled="disabled">
                     <option value="">请选择一个城市</option>
                     <option value="010">北京</option>
                     <option value="021">上海</option>
@@ -51,34 +51,34 @@
         </div>
         <div class="c-code-inner c-code-hide">
     <!--默认样式-->
-    <select name="country" class="zr-select">
+    <select name="country" class="nv-select">
         <option value="">请选择一个城市</option>
         <option value="010">北京</option>
         <option value="021">上海</option>
         <option value="0571">杭州</option>
     </select>
     <!--禁用样式-->
-    <select name="country" class="zr-select" disabled="disabled">
+    <select name="country" class="nv-select" disabled="disabled">
         <option value="">请选择一个城市</option>
         <option value="010">北京</option>
         <option value="021">上海</option>
         <option value="0571">杭州</option>
     </select>
         </div>
-        <a href="javascript:void(0);" class="c-toggle"><span>显示代码</span><i class="zricon-arrow-down"></i></a>
+        <a href="javascript:void(0);" class="c-toggle"><span>显示代码</span><i class="nvicon-arrow-down"></i></a>
     </section>
     <div class="c-block-50"></div>
     <section class="c-sub-title">
         <p>不同尺寸 <a href="#">#</a></p>
         <span>定义了select选择器三种尺寸：大、中（默认）、小；高度分别为  <i class="c-block-inline">40px</i>   <i class="c-block-inline">32px</i>   <i class="c-block-inline">24px</i>；
-        大尺寸和小尺寸需额外增加样式 <i class="c-block-inline">zr-select-lg</i> 和 <i class="c-block-inline">zr-select-sm</i>。</span>
+        大尺寸和小尺寸需额外增加样式 <i class="c-block-inline">nv-select-lg</i> 和 <i class="c-block-inline">nv-select-sm</i>。</span>
     </section>
     <section class="c-code">
         <!--switch code show or hide-->
         <div class="c-code-switch">&lt;code&gt;</div>
         <div class="c-demo">
             <div style="width: 160px;display: inline-block;margin-right: 16px">
-                <select name="country" class="zr-select zr-select-sm">
+                <select name="country" class="nv-select nv-select-sm">
                     <option value="">请选择一个城市</option>
                     <option value="010">北京</option>
                     <option value="021">上海</option>
@@ -86,7 +86,7 @@
                 </select>
             </div>
             <div style="width: 160px;display: inline-block;margin-right: 16px">
-                <select name="country" class="zr-select">
+                <select name="country" class="nv-select">
                     <option value="">请选择一个城市</option>
                     <option value="010">北京</option>
                     <option value="021">上海</option>
@@ -94,7 +94,7 @@
                 </select>
             </div>
             <div style="width: 160px;display: inline-block">
-                <select name="country" class="zr-select zr-select-lg">
+                <select name="country" class="nv-select nv-select-lg">
                     <option value="">请选择一个城市</option>
                     <option value="010">北京</option>
                     <option value="021">上海</option>
@@ -103,29 +103,29 @@
             </div>
         </div>
         <div class="c-code-inner c-code-hide">
-    <!--小尺寸 需额外增加样式“zr-select-sm”-->
-    <select name="country" class="zr-select zr-select-sm">
+    <!--小尺寸 需额外增加样式“nv-select-sm”-->
+    <select name="country" class="nv-select nv-select-sm">
         <option value="">请选择一个城市</option>
         <option value="010">北京</option>
         <option value="021">上海</option>
         <option value="0571">杭州</option>
     </select>
     <!--默认尺寸-->
-    <select name="country" class="zr-select">
+    <select name="country" class="nv-select">
         <option value="">请选择一个城市</option>
         <option value="010">北京</option>
         <option value="021">上海</option>
         <option value="0571">杭州</option>
     </select>
-    <!--大尺寸 需额外增加样式“zr-select-lg”-->
-    <select name="country" class="zr-select zr-select-lg">
+    <!--大尺寸 需额外增加样式“nv-select-lg”-->
+    <select name="country" class="nv-select nv-select-lg">
         <option value="">请选择一个城市</option>
         <option value="010">北京</option>
         <option value="021">上海</option>
         <option value="0571">杭州</option>
     </select>
         </div>
-        <a href="javascript:void(0);" class="c-toggle"><span>显示代码</span><i class="zricon-arrow-down"></i></a>
+        <a href="javascript:void(0);" class="c-toggle"><span>显示代码</span><i class="nvicon-arrow-down"></i></a>
     </section>
     <div class="c-block-50"></div>
     <section class="c-sub-title">
@@ -137,7 +137,7 @@
         <div class="c-code-switch">&lt;code&gt;</div>
         <div class="c-demo">
             <div style="width: 160px">
-                <select name="country" multiple="multiple" class="zr-select">
+                <select name="country" multiple="multiple" class="nv-select">
                     <option value="010">北京</option>
                     <option value="021">上海</option>
                     <option value="0571">杭州</option>
@@ -145,13 +145,13 @@
             </div>
         </div>
         <div class="c-code-inner c-code-hide">
-    <select name="country" multiple="multiple" class="zr-select">
+    <select name="country" multiple="multiple" class="nv-select">
         <option value="010">北京</option>
         <option value="021">上海</option>
         <option value="0571">杭州</option>
     </select>
         </div>
-        <a href="javascript:void(0);" class="c-toggle"><span>显示代码</span><i class="zricon-arrow-down"></i></a>
+        <a href="javascript:void(0);" class="c-toggle"><span>显示代码</span><i class="nvicon-arrow-down"></i></a>
     </section>
     <div class="c-block-50"></div>
     <section class="c-sub-title">
@@ -163,7 +163,7 @@
         <div class="c-code-switch">&lt;code&gt;</div>
         <div class="c-demo">
             <div style="width: 160px;display: inline-block">
-                <select name="country" class="zr-select">
+                <select name="country" class="nv-select">
                     <option value="">请选择一个城市</option>
                     <option value="010">北京</option>
                     <option value="021" selected="selected">上海</option>
@@ -171,7 +171,7 @@
                 </select>
             </div>
             <div style="width: 160px;display: inline-block">
-                <select name="country" multiple="multiple" class="zr-select">
+                <select name="country" multiple="multiple" class="nv-select">
                     <option value="010">北京</option>
                     <option value="021" selected="selected">上海</option>
                     <option value="0571" selected="selected">杭州</option>
@@ -180,25 +180,25 @@
         </div>
         <div class="c-code-inner c-code-hide">
     <!--默认选中“上海”-->
-    <select name="country" class="zr-select">
+    <select name="country" class="nv-select">
         <option value="">请选择一个城市</option>
         <option value="010">北京</option>
         <option value="021" selected="selected">上海</option>
         <option value="0571">杭州</option>
     </select>
     <!--多选列表默认选中-->
-    <select name="country" multiple="multiple" class="zr-select">
+    <select name="country" multiple="multiple" class="nv-select">
         <option value="010">北京</option>
         <option value="021" selected="selected">上海</option>
         <option value="0571" selected="selected">杭州</option>
     </select>
         </div>
-        <a href="javascript:void(0);" class="c-toggle"><span>显示代码</span><i class="zricon-arrow-down"></i></a>
+        <a href="javascript:void(0);" class="c-toggle"><span>显示代码</span><i class="nvicon-arrow-down"></i></a>
     </section>
     <div class="c-block-50"></div>
     <section class="c-sub-title">
         <p>自定义DOM监听事件 <a href="#">#</a></p>
-        <span>1.3.3版本后组件在原生的DOM对象上挂载了<i class="c-block-inline">zrchange</i>方法，需要改变select后重新渲染页面的话可以使用此方法（需升级为1.3.3及以后的版本）。</span>
+        <span>1.3.3版本后组件在原生的DOM对象上挂载了<i class="c-block-inline">nvchange</i>方法，需要改变select后重新渲染页面的话可以使用此方法（需升级为1.3.3及以后的版本）。</span>
     </section>
     <section class="c-code">
         <!--switch code show or hide-->
@@ -206,7 +206,7 @@
         <div class="c-demo">
             <div style="margin-top: 20px">
                 <div style="width: 160px;display: inline-block">
-                    <select name="country" class="zr-select" id="selectDom1">
+                    <select name="country" class="nv-select" id="selectDom1">
                         <option value="">请选择一个城市</option>
                         <option value="010">北京</option>
                         <option value="021">上海</option>
@@ -214,12 +214,12 @@
                     </select>
                 </div>
                 <div style="display: inline-block;margin-left: 20px">
-                    <button type="button" class="zr-btn zr-btn-primary" id="changeDis">改变select的disabled属性</button>
+                    <button type="button" class="nv-btn nv-btn-primary" id="changeDis">改变select的disabled属性</button>
                 </div>
             </div>
             <div style="margin-top: 20px">
                 <div style="width: 160px;display: inline-block">
-                    <select name="country" class="zr-select" id="selectDom2">
+                    <select name="country" class="nv-select" id="selectDom2">
                         <option value="">请选择一个城市</option>
                         <option value="010">北京</option>
                         <option value="021">上海</option>
@@ -227,12 +227,12 @@
                     </select>
                 </div>
                 <div style="display: inline-block;margin-left: 20px">
-                    <button type="button" class="zr-btn zr-btn-primary" id="changeVal">改变select的value属性</button>
+                    <button type="button" class="nv-btn nv-btn-primary" id="changeVal">改变select的value属性</button>
                 </div>
             </div>
             <div style="margin-top: 20px">
                 <div style="width: 160px;display: inline-block">
-                    <select name="country" class="zr-select" id="selectDom3">
+                    <select name="country" class="nv-select" id="selectDom3">
                         <option value="">请选择一个城市</option>
                         <option value="010">北京</option>
                         <option value="021">上海</option>
@@ -240,24 +240,24 @@
                     </select>
                 </div>
                 <div style="display: inline-block;margin-left: 20px">
-                    <button type="button" class="zr-btn zr-btn-primary" id="deleteOpt">删除select的option</button>
+                    <button type="button" class="nv-btn nv-btn-primary" id="deleteOpt">删除select的option</button>
                 </div>
             </div>
         </div>
         <div class="c-code-inner c-code-hide">
     <!--改变select的disabled属性-->
-    <select name="country" class="zr-select" id="selectDom1">
+    <select name="country" class="nv-select" id="selectDom1">
         <option value="">请选择一个城市</option>
         <option value="010">北京</option>
         <option value="021">上海</option>
         <option value="0571">杭州</option>
     </select>
-    <button type="button" class="zr-btn zr-btn-primary" id="changeDis">改变select的disabled属性</button>
+    <button type="button" class="nv-btn nv-btn-primary" id="changeDis">改变select的disabled属性</button>
     <script type="text/javascript">
-        Zr.ready(function(){
-            Zr.use("jquery",function (zr,$) {
+        Nv.ready(function(){
+            Nv.use("jquery",function (nv,$) {
                 $("#changeDis").off("click").on("click",function () {
-                    document.getElementById("selectDom1").zrchange({
+                    document.getElementById("selectDom1").nvchange({
                         eventFn:function () {
                             $("#selectDom1").attr("disabled","disabled");
                         }
@@ -267,18 +267,18 @@
         })
     </script>
     <!--改变select的value属性-->
-    <select name="country" class="zr-select" id="selectDom2">
+    <select name="country" class="nv-select" id="selectDom2">
         <option value="">请选择一个城市</option>
         <option value="010">北京</option>
         <option value="021">上海</option>
         <option value="0571">杭州</option>
     </select>
-    <button type="button" class="zr-btn zr-btn-primary" id="changeVal">改变select的value属性</button>
+    <button type="button" class="nv-btn nv-btn-primary" id="changeVal">改变select的value属性</button>
     <script type="text/javascript">
-        Zr.ready(function(){
-            Zr.use("jquery",function (zr,$) {
+        Nv.ready(function(){
+            Nv.use("jquery",function (nv,$) {
                 $("#changeVal").off("click").on("click",function () {
-                    document.getElementById("selectDom2").zrchange({
+                    document.getElementById("selectDom2").nvchange({
                         eventFn:function () {
 	                        $("#selectDom2").val("010");
                         }
@@ -288,18 +288,18 @@
         })
     </script>
     <!--删除select的option-->
-    <select name="country" class="zr-select" id="selectDom3">
+    <select name="country" class="nv-select" id="selectDom3">
         <option value="">请选择一个城市</option>
         <option value="010">北京</option>
         <option value="021">上海</option>
         <option value="0571">杭州</option>
     </select>
-    <button type="button" class="zr-btn zr-btn-primary" id="deleteOpt">删除select的option</button>
+    <button type="button" class="nv-btn nv-btn-primary" id="deleteOpt">删除select的option</button>
     <script type="text/javascript">
-        Zr.ready(function(){
-            Zr.use("jquery",function (zr,$) {
+        Nv.ready(function(){
+            Nv.use("jquery",function (nv,$) {
                 $("#deleteOpt").off("click").on("click",function () {
-                    document.getElementById("selectDom3").zrchange({
+                    document.getElementById("selectDom3").nvchange({
                         eventFn:function () {
 	                        $("#selectDom3").find("option[value=010]").remove();
                         }
@@ -309,7 +309,7 @@
         })
     </script>
         </div>
-        <a href="javascript:void(0);" class="c-toggle"><span>显示代码</span><i class="zricon-arrow-down"></i></a>
+        <a href="javascript:void(0);" class="c-toggle"><span>显示代码</span><i class="nvicon-arrow-down"></i></a>
     </section>
     <div class="c-block-50"></div>
     <div class="c-options-title">API</div>
@@ -339,7 +339,7 @@
                 <tbody>
                 <tr>
                     <td>
-                        <div class="c-cell c-table-w-125">zrchange</div>
+                        <div class="c-cell c-table-w-125">nvchange</div>
                     </td>
                     <td>
                         <div class="c-cell c-table-w-200">自定义监听DOM变化的事件</div>
@@ -360,31 +360,31 @@
 <!--注意此段js必须第一引入在开发模式下{-->
 <script type="text/javascript" src="js/input.js"></script>
 <script type="text/javascript" src="js/select.js"></script>
-<script type="text/javascript" src="//storage.jd.com/1.1.3/zr.dev.min.js"></script>
+<script type="text/javascript" src="//storage.jd.com/1.1.3/nv.dev.min.js"></script>
 <script type="text/javascript">
-    Zr.config({
+    Nv.config({
         baseUrl: "/js/plugin_modules/",
         requestTime:true
     })
-    Zr.ready(function(){
-        Zr.use("./js/quickMenu","./js/code")
-	    Zr.use("jquery",function (zr,$) {
+    Nv.ready(function(){
+        Nv.use("./js/quickMenu","./js/code")
+	    Nv.use("jquery",function (nv,$) {
 		    $("#changeDis").off("click").on("click",function () {
-			    document.getElementById("selectDom1").zrchange({
+			    document.getElementById("selectDom1").nvchange({
                     eventFn:function () {
 	                    $("#selectDom1").attr("disabled","disabled");
                     }
                 })
 		    });
 		    $("#changeVal").off("click").on("click",function () {
-			    document.getElementById("selectDom2").zrchange({
+			    document.getElementById("selectDom2").nvchange({
 				    eventFn:function () {
 					    $("#selectDom2").val("010");
 				    }
 			    })
 		    });
 		    $("#deleteOpt").off("click").on("click",function () {
-			    document.getElementById("selectDom3").zrchange({
+			    document.getElementById("selectDom3").nvchange({
 				    eventFn:function () {
 					    $("#selectDom3").find("option[value=010]").remove();
 				    }
