--- a/examples/badge.html
+++ b/examples/badge.html
@@ -3,10 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <title>组件平台显示内容</title>
-    <link type="text/css" rel="stylesheet" href="/frontPage/css/content.min.css"/>
-    <script type="text/javascript" src="//cdn.bootcss.com/jquery/1.10.1/jquery.min.js"></script>
-    <script type="text/javascript" src="//storage.jd.com/1.0.9/zr.dev.min.js"></script>
-    <script type="text/javascript" src="js/badge.js"></script>
+    <link type="text/css" rel="stylesheet" href="//storage.jd.com/v2.0.0/content.min.css" />
+    <link type="text/css" rel="stylesheet" href="//storage.360buyimg.com/v2.0.0/nv.min.css" />
+    <script type="text/javascript" src="//storage.360buyimg.com/v2.0.0/nv.js"></script>
     <style>
         .c-demo>div{
             margin-bottom: 17px;
@@ -16,7 +15,7 @@
         .c-demo > div:last-child{
             margin-bottom: 0;
         }
-        .zr-badge{
+        .nv-badge{
             margin-right: 60px;
         }
 
@@ -28,8 +27,8 @@
         <p>Badge 徽标</p>
         <span>
             出现在图标或者按钮的右上角，提醒用户有未读信息
-            <a style="font-size: 16px; margin-right: 15px;" href="//github.com/guguaihaha/zr-source/blob/master/docs/inner/badge.md"><b>API文档</b></a>
-            <a style="font-size: 16px" href="//github.com/guguaihaha/zr-source/issues/24"><b>组件问题反馈和讨论</b></a>
+            <a style="font-size: 16px; margin-right: 15px;" href="//github.com/guguaihaha/nv-source/blob/master/docs/inner/badge.md"><b>API文档</b></a>
+            <a style="font-size: 16px" href="//github.com/guguaihaha/nv-source/issues/24"><b>组件问题反馈和讨论</b></a>
         </span>
     </section>
     <div class="c-line"></div>
@@ -40,58 +39,58 @@
     <section class="c-code">
         <div class="c-demo">
             <div>
-                <span class="zr-badge">
-                    <button class="zr-btn zr-btn-default">Comment</button>
-                    <span class="zr-badge-normal">9</span>
+                <span class="nv-badge">
+                    <button class="nv-btn nv-btn-default">Comment</button>
+                    <span class="nv-badge-normal">9</span>
                 </span>
-                <span class="zr-badge">
-                    <button class="zr-btn zr-btn-default">Comment</button>
-                    <span class="zr-badge-normal" data-max="99">90</span>
+                <span class="nv-badge">
+                    <button class="nv-btn nv-btn-default">Comment</button>
+                    <span class="nv-badge-normal" data-max="99">90</span>
                 </span>
-                <span class="zr-badge">
-                    <span class="zr-photo">
-                        <img src="//storage.jd.com/zrstatic/images/demo1.jpg" alt="">
+                <span class="nv-badge">
+                    <span class="nv-photo">
+                        <img src="//storage.jd.com/nvstatic/images/demo1.jpg" alt="">
                     </span>
-                    <span class="zr-badge-normal" data-max="99">9</span>
+                    <span class="nv-badge-normal" data-max="99">9</span>
                 </span>
-                <span class="zr-badge">
-                    <button class="zr-btn zr-btn-primary">Comment</button>
-                    <span class="zr-badge-normal" data-max="99">100</span>
+                <span class="nv-badge">
+                    <button class="nv-btn nv-btn-primary">Comment</button>
+                    <span class="nv-badge-normal" data-max="99">100</span>
                 </span>
                 <span>
                     <span>option1</span>
-                    <span class="zr-badge-normal" data-max="99">9</span>
+                    <span class="nv-badge-normal" data-max="99">9</span>
                 </span>
             </div>
             <div>
-                <button id="btn" class="zr-btn zr-btn-primary">DOM 节点的监听测试</button>
+                <button id="btn" class="nv-btn nv-btn-primary">DOM 节点的监听测试</button>
             </div>
         </div>
         <div class="c-code-inner c-code-hide">
-        <span class="zr-badge">
-            <button class="zr-btn zr-btn-default">Comment</button>
-            <span class="zr-badge-normal" data-max="99">9</span>
+        <span class="nv-badge">
+            <button class="nv-btn nv-btn-default">Comment</button>
+            <span class="nv-badge-normal" data-max="99">9</span>
         </span>
-        <span class="zr-badge">
-            <button class="zr-btn zr-btn-default">Comment</button>
-            <span class="zr-badge-normal" data-max="99">99</span>
+        <span class="nv-badge">
+            <button class="nv-btn nv-btn-default">Comment</button>
+            <span class="nv-badge-normal" data-max="99">99</span>
         </span>
-        <span class="zr-badge">
-            <span class="zr-photo">
-                <img src="//storage.jd.com/zrstatic/images/demo1.jpg" alt="">
+        <span class="nv-badge">
+            <span class="nv-photo">
+                <img src="//storage.jd.com/nvstatic/images/demo1.jpg" alt="">
             </span>
-            <span class="zr-badge-normal" data-max="99">9</span>
+            <span class="nv-badge-normal" data-max="99">9</span>
         </span>
-        <span class="zr-badge">
-            <button class="zr-btn zr-btn-primary">Comment</button>
-            <span class="zr-badge-normal" data-max="99">100</span>
+        <span class="nv-badge">
+            <button class="nv-btn nv-btn-primary">Comment</button>
+            <span class="nv-badge-normal" data-max="99">100</span>
         </span>
         <span>
             <span>option1</span>
-            <span class="zr-badge-normal" data-max="99">9</span>
+            <span class="nv-badge-normal" data-max="99">9</span>
         </span>
         </div>
-        <a href="javascript:void(0);" class="c-toggle"><span>显示代码</span><i class="zricon-arrow-down"></i></a>
+        <a href="javascript:void(0);" class="c-toggle"><span>显示代码</span><i class="nvicon-arrow-down"></i></a>
     </section>
     <div class="c-block-50"></div>
     <section class="c-sub-title">
@@ -101,36 +100,36 @@
     <section class="c-code">
         <div class="c-demo">
             <div>
-                <span class="zr-badge">
-                    <button class="zr-btn zr-btn-default">Comment</button>
-                    <span  class="zr-badge-normal" data-max="99">100000</span>
+                <span class="nv-badge">
+                    <button class="nv-btn nv-btn-default">Comment</button>
+                    <span  class="nv-badge-normal" data-max="99">100000</span>
                 </span>
-                <span class="zr-badge">
-                    <button class="zr-btn zr-btn-default">Comment</button>
-                    <span class="zr-badge-normal" data-max="999">100000</span>
+                <span class="nv-badge">
+                    <button class="nv-btn nv-btn-default">Comment</button>
+                    <span class="nv-badge-normal" data-max="999">100000</span>
                 </span>
-                <span class="zr-badge">
-                    <button class="zr-btn zr-btn-default">Comment</button>
-                    <span class="zr-badge-normal" data-max="9999">100000</span>
+                <span class="nv-badge">
+                    <button class="nv-btn nv-btn-default">Comment</button>
+                    <span class="nv-badge-normal" data-max="9999">100000</span>
                 </span>
             </div>
 
         </div>
         <div class="c-code-inner c-code-hide">
-        <span class="zr-badge">
-            <button class="zr-btn zr-btn-default">Comment</button>
-            <span class="zr-badge-normal" data-max="99">100000</span>
+        <span class="nv-badge">
+            <button class="nv-btn nv-btn-default">Comment</button>
+            <span class="nv-badge-normal" data-max="99">100000</span>
         </span>
-        <span class="zr-badge">
-            <button class="zr-btn zr-btn-default">Comment</button>
-            <span class="zr-badge-normal" data-max="999">100000</span>
+        <span class="nv-badge">
+            <button class="nv-btn nv-btn-default">Comment</button>
+            <span class="nv-badge-normal" data-max="999">100000</span>
         </span>
-        <span class="zr-badge">
-            <button class="zr-btn zr-btn-default">Comment</button>
-            <span class="zr-badge-normal" data-max="9999">100000</span>
+        <span class="nv-badge">
+            <button class="nv-btn nv-btn-default">Comment</button>
+            <span class="nv-badge-normal" data-max="9999">100000</span>
         </span>
         </div>
-        <a href="javascript:void(0);" class="c-toggle"><span>显示代码</span><i class="zricon-arrow-down"></i></a>
+        <a href="javascript:void(0);" class="c-toggle"><span>显示代码</span><i class="nvicon-arrow-down"></i></a>
     </section>
     <div class="c-block-50"></div>
     <section class="c-sub-title">
@@ -140,27 +139,27 @@
     <section class="c-code">
         <div class="c-demo">
             <div>
-                <span class="zr-badge">
+                <span class="nv-badge">
                     <span>New Message</span>
-                    <span class="zr-badge-pointer"></span>
+                    <span class="nv-badge-pointer"></span>
                 </span>
-                <span class="zr-badge">
+                <span class="nv-badge">
                     <span>……</span>
-                    <span class="zr-badge-pointer"></span>
+                    <span class="nv-badge-pointer"></span>
                 </span>
             </div>
         </div>
         <div class="c-code-inner c-code-hide">
-        <span class="zr-badge">
+        <span class="nv-badge">
             <span>New Message</span>
-            <span class="zr-badge-pointer"></span>
+            <span class="nv-badge-pointer"></span>
         </span>
-        <span class="zr-badge">
+        <span class="nv-badge">
             <span>……</span>
-            <span class="zr-badge-pointer"></span>
+            <span class="nv-badge-pointer"></span>
         </span>
         </div>
-        <a href="javascript:void(0);" class="c-toggle"><span>显示代码</span><i class="zricon-arrow-down"></i></a>
+        <a href="javascript:void(0);" class="c-toggle"><span>显示代码</span><i class="nvicon-arrow-down"></i></a>
     </section>
     <div class="c-block-50"></div>
     <section class="c-sub-title">
@@ -170,28 +169,28 @@
     <section class="c-code">
         <div class="c-demo">
             <div>
-                <span class="zr-badge">
-                    <button class="zr-btn zr-btn-default">Comment</button>
-                    <span class="zr-badge-normal">Comment</span>
+                <span class="nv-badge">
+                    <button class="nv-btn nv-btn-default">Comment</button>
+                    <span class="nv-badge-normal">Comment</span>
                 </span>
             </div>
         </div>
         <div class="c-code-inner c-code-hide">
-        <span class="zr-badge">
-            <button class="zr-btn zr-btn-default">Comment</button>
-            <span class="zr-badge-normal">Comment</span>
+        <span class="nv-badge">
+            <button class="nv-btn nv-btn-default">Comment</button>
+            <span class="nv-badge-normal">Comment</span>
         </span>
         </div>
-        <a href="javascript:void(0);" class="c-toggle"><span>显示代码</span><i class="zricon-arrow-down"></i></a>
+        <a href="javascript:void(0);" class="c-toggle"><span>显示代码</span><i class="nvicon-arrow-down"></i></a>
     </section>
 </article>
 <script type="text/javascript">
-    Zr.config({
+    Nv.config({
         baseUrl: "/js/plugin_modules/",
         requestTime: true
     })
-    Zr.ready(function () {
-        Zr.use("./js/quickMenu", "./js/code","./jquery/")
+    Nv.ready(function () {
+        Nv.use("./js/quickMenu", "./js/code","./jquery/")
     })
 </script>
 </body>
