--- a/examples/breadcrumb.html
+++ b/examples/breadcrumb.html
@@ -3,16 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <title>组件平台显示内容</title>
-    <link type="text/css" rel="stylesheet" href="/frontPage/css/content.min.css?1" />
-    <link type="text/css" rel="stylesheet" href="//storage.jd.com/0.0.1/zr/css/cdn_zr.min.css" />
-    <script type="text/javascript" src="/js/zr.min.js?1"></script>
+    <link type="text/css" rel="stylesheet" href="//storage.jd.com/v2.0.0/content.min.css" />
+    <link type="text/css" rel="stylesheet" href="//storage.360buyimg.com/v2.0.0/nv.min.css" />
+    <script type="text/javascript" src="//storage.360buyimg.com/v2.0.0/nv.js"></script>
     <script type="text/javascript">
-        Zr.config({
+        Nv.config({
             baseUrl: "/js/plugin_modules/",
             requestTime:true
         })
-        Zr.ready(function(){
-            Zr.use("./js/quickMenu","./js/code")
+        Nv.ready(function(){
+            Nv.use("./js/quickMenu","./js/code")
         })
     </script>
 </head>
@@ -22,8 +22,8 @@
         <p>Breadcrumb面包屑</p>
         <span>
             告诉用户他们在网站中的位置以及如何返回
-            <a style="font-size: 16px; margin-right: 15px;" href="//github.com/guguaihaha/zr-source/blob/master/docs/inner/breadcrumb.md"><b>API文档</b></a>
-            <a style="font-size: 16px" href="//github.com/guguaihaha/zr-source/issues/6"><b>组件问题反馈和讨论</b></a>
+            <a style="font-size: 16px; margin-right: 15px;" href="//github.com/guguaihaha/nv-source/blob/master/docs/inner/breadcrumb.md"><b>API文档</b></a>
+            <a style="font-size: 16px" href="//github.com/guguaihaha/nv-source/issues/6"><b>组件问题反馈和讨论</b></a>
         </span>
     </section>
     <div class="c-line"></div>
@@ -46,36 +46,36 @@
         <!--switch code show or hide-->
         <div class="c-code-switch">&lt;code&gt;</div>
         <div class="c-demo">
-            <div class="zr-breadcrumb">
-                <em class="zr-breadcrumb-normal">Home</em>
-                <i class="zricon-arrow-right zr-breadcrumb-icon"></i>
-                <em class="zr-breadcrumb-normal">
-                    <a href="" class="zr-breadcrumb-link">Page</a>
+            <div class="nv-breadcrumb">
+                <em class="nv-breadcrumb-normal">Home</em>
+                <i class="nvicon-arrow-right nv-breadcrumb-icon"></i>
+                <em class="nv-breadcrumb-normal">
+                    <a href="" class="nv-breadcrumb-link">Page</a>
                 </em>
-                <i class="zricon-arrow-right zr-breadcrumb-icon"></i>
-                <em class="zr-breadcrumb-normal">
-                    <a href="" class="zr-breadcrumb-link">Subpage</a>
+                <i class="nvicon-arrow-right nv-breadcrumb-icon"></i>
+                <em class="nv-breadcrumb-normal">
+                    <a href="" class="nv-breadcrumb-link">Subpage</a>
                 </em>
-                <i class="zricon-arrow-right zr-breadcrumb-icon"></i>
-                <em class="zr-breadcrumb-normal zr-breadcrumb-current">Balabala</em>
+                <i class="nvicon-arrow-right nv-breadcrumb-icon"></i>
+                <em class="nv-breadcrumb-normal nv-breadcrumb-current">Balabala</em>
             </div>
         </div>
         <div class="c-code-inner c-code-hide">
-    <div class="zr-breadcrumb">
-        <em class="zr-breadcrumb-normal">Home</em>
-        <i class="zricon-arrow-right zr-breadcrumb-icon"></i>
-        <em class="zr-breadcrumb-normal">
-            <a href="" class="zr-breadcrumb-link">Page</a>
+    <div class="nv-breadcrumb">
+        <em class="nv-breadcrumb-normal">Home</em>
+        <i class="nvicon-arrow-right nv-breadcrumb-icon"></i>
+        <em class="nv-breadcrumb-normal">
+            <a href="" class="nv-breadcrumb-link">Page</a>
         </em>
-        <i class="zricon-arrow-right zr-breadcrumb-icon"></i>
-        <em class="zr-breadcrumb-normal">
-            <a href="" class="zr-breadcrumb-link">Subpage</a>
+        <i class="nvicon-arrow-right nv-breadcrumb-icon"></i>
+        <em class="nv-breadcrumb-normal">
+            <a href="" class="nv-breadcrumb-link">Subpage</a>
         </em>
-        <i class="zricon-arrow-right zr-breadcrumb-icon"></i>
-        <em class="zr-breadcrumb-normal zr-breadcrumb-current">Balabala</em>
+        <i class="nvicon-arrow-right nv-breadcrumb-icon"></i>
+        <em class="nv-breadcrumb-normal nv-breadcrumb-current">Balabala</em>
     </div>
         </div>
-        <a href="javascript:void(0);" class="c-toggle"><span>显示代码</span><i class="zricon-arrow-down"></i></a>
+        <a href="javascript:void(0);" class="c-toggle"><span>显示代码</span><i class="nvicon-arrow-down"></i></a>
     </section>
     <div class="c-block-50"></div>
     <section class="c-sub-title">
@@ -86,69 +86,69 @@
         <!--switch code show or hide-->
         <div class="c-code-switch">&lt;code&gt;</div>
         <div class="c-demo">
-            <div class="zr-breadcrumb">
-                <a href="" class="zr-breadcrumb-link">
-                    <i class="zricon-home-empty"></i>
-                    <em class="zr-breadcrumb-normal">Home</em>
+            <div class="nv-breadcrumb">
+                <a href="" class="nv-breadcrumb-link">
+                    <i class="nvicon-home-empty"></i>
+                    <em class="nv-breadcrumb-normal">Home</em>
                 </a>
-                <i class="zricon-arrow-right zr-breadcrumb-icon"></i>
-                <a href="" class="zr-breadcrumb-link">
-                    <i class="zricon-doc-empty"></i>
-                    <em class="zr-breadcrumb-normal">Page</em>
+                <i class="nvicon-arrow-right nv-breadcrumb-icon"></i>
+                <a href="" class="nv-breadcrumb-link">
+                    <i class="nvicon-doc-empty"></i>
+                    <em class="nv-breadcrumb-normal">Page</em>
                 </a>
-                <i class="zricon-arrow-right zr-breadcrumb-icon"></i>
-                <em class="zr-breadcrumb-normal zr-breadcrumb-current">Balabala</em>
+                <i class="nvicon-arrow-right nv-breadcrumb-icon"></i>
+                <em class="nv-breadcrumb-normal nv-breadcrumb-current">Balabala</em>
             </div>
         </div>
         <div class="c-code-inner c-code-hide">
-    <div class="zr-breadcrumb">
-        <a href="" class="zr-breadcrumb-link">
-            <i class="zricon-home-empty"></i>
-            <em class="zr-breadcrumb-normal">Home</em>
+    <div class="nv-breadcrumb">
+        <a href="" class="nv-breadcrumb-link">
+            <i class="nvicon-home-empty"></i>
+            <em class="nv-breadcrumb-normal">Home</em>
         </a>
-        <i class="zricon-arrow-right zr-breadcrumb-icon"></i>
-        <a href="" class="zr-breadcrumb-link">
-            <i class="zricon-doc-empty"></i>
-            <em class="zr-breadcrumb-normal">Page</em>
+        <i class="nvicon-arrow-right nv-breadcrumb-icon"></i>
+        <a href="" class="nv-breadcrumb-link">
+            <i class="nvicon-doc-empty"></i>
+            <em class="nv-breadcrumb-normal">Page</em>
         </a>
-        <i class="zricon-arrow-right zr-breadcrumb-icon"></i>
-        <em class="zr-breadcrumb-normal zr-breadcrumb-current">Balabala</em>
+        <i class="nvicon-arrow-right nv-breadcrumb-icon"></i>
+        <em class="nv-breadcrumb-normal nv-breadcrumb-current">Balabala</em>
     </div>
         </div>
-        <a href="javascript:void(0);" class="c-toggle"><span>显示代码</span><i class="zricon-arrow-down"></i></a>
+        <a href="javascript:void(0);" class="c-toggle"><span>显示代码</span><i class="nvicon-arrow-down"></i></a>
     </section>
     <section class="c-code">
         <!--switch code show or hide-->
         <div class="c-code-switch">&lt;code&gt;</div>
         <div class="c-demo">
-            <div class="zr-breadcrumb">
-                <a href="" class="zr-breadcrumb-link">
-                    <i class="zricon-home-empty"></i>
+            <div class="nv-breadcrumb">
+                <a href="" class="nv-breadcrumb-link">
+                    <i class="nvicon-home-empty"></i>
                 </a>
-                <i class="zricon-arrow-right"></i>
-                <a href="" class="zr-breadcrumb-link">
-                    <i class="zricon-doc-empty"></i>
-                    <em class="zr-breadcrumb-normal">Page</em>
+                <i class="nvicon-arrow-right"></i>
+                <a href="" class="nv-breadcrumb-link">
+                    <i class="nvicon-doc-empty"></i>
+                    <em class="nv-breadcrumb-normal">Page</em>
                 </a>
-                <i class="zricon-arrow-right"></i>
-                <em class="zr-breadcrumb-normal zr-breadcrumb-current">Balabala</em>
+                <i class="nvicon-arrow-right"></i>
+                <em class="nv-breadcrumb-normal nv-breadcrumb-current">Balabala</em>
             </div>
         </div>
         <div class="c-code-inner c-code-hide">
-    <div class="zr-breadcrumb">
-        <a href="" class="zr-breadcrumb-link">
-            <i class="zricon-home-empty"></i>
+    <div class="nv-breadcrumb">
+        <a href="" class="nv-breadcrumb-link">
+            <i class="nvicon-home-empty"></i>
         </a>
-        <i class="zricon-arrow-right"></i>
-        <a href="" class="zr-breadcrumb-link">
-            <i class="zricon-doc-empty"></i>
-            <em class="zr-breadcrumb-normal">Page</em>
+        <i class="nvicon-arrow-right"></i>
+        <a href="" class="nv-breadcrumb-link">
+            <i class="nvicon-doc-empty"></i>
+            <em class="nv-breadcrumb-normal">Page</em>
         </a>
-        <i class="zricon-arrow-right"></i>
-        <em class="zr-breadcrumb-normal zr-breadcrumb-current">Balabala</em>
+        <i class="nvicon-arrow-right"></i>
+        <em class="nv-breadcrumb-normal nv-breadcrumb-current">Balabala</em>
     </div>
         </div>
-        <a href="javascript:void(0);" class="c-toggle"><span>显示代码</span><i class="zricon-arrow-down"></i></a>
+        <a href="javascript:void(0);" class="c-toggle"><span>显示代码</span><i class="nvicon-arrow-down"></i></a>
     </section>
 </article>
 </body>
