--- a/examples/buttons.html
+++ b/examples/buttons.html
@@ -3,21 +3,22 @@
 <head>
     <meta charset="UTF-8">
     <title>Buttons</title>
-    <link type="text/css" rel="stylesheet" href="/frontPage/css/content.min.css?1" />
     <style type="text/css">
-        .c-demo-btn .zr-btn{
+        .c-demo-btn .nv-btn{
             margin-right: 8px;
             vertical-align: bottom;
         }
     </style>
-    <script type="text/javascript" src="//storage.jd.com/0.0.1/zr.min.js"></script>
+    <link type="text/css" rel="stylesheet" href="//storage.jd.com/v2.0.0/content.min.css" />
+    <link type="text/css" rel="stylesheet" href="//storage.360buyimg.com/v2.0.0/nv.min.css" />
+    <script type="text/javascript" src="//storage.360buyimg.com/v2.0.0/nv.js"></script>
     <script type="text/javascript">
-        Zr.config({
+        Nv.config({
             baseUrl:"/js/plugin_modules/",
             requestTime:true
         })
-        Zr.ready(function(){
-            Zr.use("./js/quickMenu","./js/code")
+        Nv.ready(function(){
+            Nv.use("./js/quickMenu","./js/code")
         })
     </script>
 </head>
@@ -27,8 +28,8 @@
         <p>Button 按钮</p>
         <span>
             基础控件，没有自定义方法。直接添加样式和自定义属性即可使用。
-            <a style="font-size: 16px; margin-right: 15px;" href="//github.com/guguaihaha/zr-source/blob/master/docs/inner/button.md"><b>API文档</b></a>
-            <a style="font-size: 16px" href="//github.com/guguaihaha/zr-source/issues/2"><b>组件问题反馈和讨论</b></a>
+            <a style="font-size: 16px; margin-right: 15px;" href="//github.com/guguaihaha/nv-source/blob/master/docs/inner/button.md"><b>API文档</b></a>
+            <a style="font-size: 16px" href="//github.com/guguaihaha/nv-source/issues/2"><b>组件问题反馈和讨论</b></a>
         </span>
     </section>
     <div class="c-line"></div>
@@ -47,26 +48,26 @@
     <div class="c-block-50"></div>
     <section class="c-sub-title">
         <p>标准按钮 <a href="#">#</a></p>
-        <span>标准按钮有四种类型：主按钮 <i class="c-block-inline">zr-btn-primary</i> 、次按钮 <i class="c-block-inline">zr-btn-default</i> 、危险按钮 <i class="c-block-inline">zr-btn-danger</i> 、不可点按钮 <i class="c-block-inline">zr-btn-disable</i> 。</span>
+        <span>标准按钮有四种类型：主按钮 <i class="c-block-inline">nv-btn-primary</i> 、次按钮 <i class="c-block-inline">nv-btn-default</i> 、危险按钮 <i class="c-block-inline">nv-btn-danger</i> 、不可点按钮 <i class="c-block-inline">nv-btn-disable</i> 。</span>
     </section>
     <section class="c-code">
         <!--switch code show or hide-->
         <div class="c-code-switch">&lt;code&gt;</div>
         <div class="c-demo">
             <p class="c-demo-btn">
-                <button type="button" class="zr-btn zr-btn-primary">Primary</button>
-                <button type="button" class="zr-btn zr-btn-default">Default</button>
-                <button type="button" class="zr-btn zr-btn-danger">Danger</button>
-                <button type="button" class="zr-btn zr-btn-disable">Disable</button>
+                <button type="button" class="nv-btn nv-btn-primary">Primary</button>
+                <button type="button" class="nv-btn nv-btn-default">Default</button>
+                <button type="button" class="nv-btn nv-btn-danger">Danger</button>
+                <button type="button" class="nv-btn nv-btn-disable">Disable</button>
             </p>
         </div>
         <div class="c-code-inner c-code-hide">
-    <button type="button" class="zr-btn zr-btn-primary">Primary</button>
-    <button type="button" class="zr-btn zr-btn-default">Default</button>
-    <button type="button" class="zr-btn zr-btn-danger">Danger</button>
-    <button type="button" class="zr-btn zr-btn-disable">Disable</button>
+    <button type="button" class="nv-btn nv-btn-primary">Primary</button>
+    <button type="button" class="nv-btn nv-btn-default">Default</button>
+    <button type="button" class="nv-btn nv-btn-danger">Danger</button>
+    <button type="button" class="nv-btn nv-btn-disable">Disable</button>
         </div>
-        <a href="javascript:void(0);" class="c-toggle"><span>显示代码</span><i class="zricon-arrow-down"></i></a>
+        <a href="javascript:void(0);" class="c-toggle"><span>显示代码</span><i class="nvicon-arrow-down"></i></a>
     </section>
     <div class="c-block-50"></div>
     <section class="c-sub-title">
@@ -78,112 +79,112 @@
         <div class="c-code-switch">&lt;code&gt;</div>
         <div class="c-demo">
             <p class="c-demo-btn">
-                <a href="#" class="zr-btn zr-btn-default">A target</a>
-                <button type="button" class="zr-btn zr-btn-default">Button target</button>
-                <a href="#" type="button" class="zr-btn zr-btn-danger">A target</a>
-                <button type="button" class="zr-btn zr-btn-danger">Button target</button>
+                <a href="#" class="nv-btn nv-btn-default">A target</a>
+                <button type="button" class="nv-btn nv-btn-default">Button target</button>
+                <a href="#" type="button" class="nv-btn nv-btn-danger">A target</a>
+                <button type="button" class="nv-btn nv-btn-danger">Button target</button>
             </p>
         </div>
         <div class="c-code-inner c-code-hide">
-    <a href="#" class="zr-btn zr-btn-default">A target</a>
-    <button type="button" class="zr-btn zr-btn-default">Button target</button>
-    <a href="#" type="button" class="zr-btn zr-btn-danger">A target</a>
-    <button type="button" class="zr-btn zr-btn-danger">Button target</button>
+    <a href="#" class="nv-btn nv-btn-default">A target</a>
+    <button type="button" class="nv-btn nv-btn-default">Button target</button>
+    <a href="#" type="button" class="nv-btn nv-btn-danger">A target</a>
+    <button type="button" class="nv-btn nv-btn-danger">Button target</button>
         </div>
-        <a href="javascript:void(0);" class="c-toggle"><span>显示代码</span><i class="zricon-arrow-down"></i></a>
+        <a href="javascript:void(0);" class="c-toggle"><span>显示代码</span><i class="nvicon-arrow-down"></i></a>
     </section>
     <div class="c-block-50"></div>
     <section class="c-sub-title">
         <p>按钮尺寸 <a href="#">#</a></p>
-        <span>按钮有大 <i class="c-block-inline">zr-btn-lg</i> 、中(默认)、小 <i class="c-block-inline">zr-btn-sm</i> 三种尺寸，在这里我们只定义三种高度（24px,32px,40px）,宽度随内容自适应</span>
+        <span>按钮有大 <i class="c-block-inline">nv-btn-lg</i> 、中(默认)、小 <i class="c-block-inline">nv-btn-sm</i> 三种尺寸，在这里我们只定义三种高度（24px,32px,40px）,宽度随内容自适应</span>
     </section>
     <section class="c-code">
         <!--switch code show or hide-->
         <div class="c-code-switch">&lt;code&gt;</div>
         <div class="c-demo">
             <p class="c-demo-btn">
-                <button type="button" class="zr-btn zr-btn-primary zr-btn-sm">Small</button>
-                <button type="button" class="zr-btn zr-btn-primary">Default</button>
-                <button type="button" class="zr-btn zr-btn-primary zr-btn-lg">Large</button>
+                <button type="button" class="nv-btn nv-btn-primary nv-btn-sm">Small</button>
+                <button type="button" class="nv-btn nv-btn-primary">Default</button>
+                <button type="button" class="nv-btn nv-btn-primary nv-btn-lg">Large</button>
             </p>
             <br/>
             <p class="c-demo-btn">
-                <button type="button" class="zr-btn zr-btn-primary zr-btn-circle zr-btn-sm"><i class="zricon-search-empty"></i></button>
-                <button type="button" class="zr-btn zr-btn-primary zr-btn-circle"><i class="zricon-search-empty"></i></button>
-                <button type="button" class="zr-btn zr-btn-primary zr-btn-circle zr-btn-lg"><i class="zricon-search-empty"></i></button>
+                <button type="button" class="nv-btn nv-btn-primary nv-btn-circle nv-btn-sm"><i class="nvicon-search-empty"></i></button>
+                <button type="button" class="nv-btn nv-btn-primary nv-btn-circle"><i class="nvicon-search-empty"></i></button>
+                <button type="button" class="nv-btn nv-btn-primary nv-btn-circle nv-btn-lg"><i class="nvicon-search-empty"></i></button>
             </p>
         </div>
         <div class="c-code-inner c-code-hide">
     <!--大、中、小-->
-    <button type="button" class="zr-btn zr-btn-primary zr-btn-sm">Small</button>
-    <button type="button" class="zr-btn zr-btn-primary">Default</button>
-    <button type="button" class="zr-btn zr-btn-primary zr-btn-lg">Large</button>
+    <button type="button" class="nv-btn nv-btn-primary nv-btn-sm">Small</button>
+    <button type="button" class="nv-btn nv-btn-primary">Default</button>
+    <button type="button" class="nv-btn nv-btn-primary nv-btn-lg">Large</button>
     <!--图标按钮-->
-    <button type="button" class="zr-btn zr-btn-primary zr-btn-circle zr-btn-sm"><i class="zricon-search-empty"></i></button>
-    <button type="button" class="zr-btn zr-btn-primary zr-btn-circle"><i class="zricon-search-empty"></i></button>
-    <button type="button" class="zr-btn zr-btn-primary zr-btn-circle zr-btn-lg"><i class="zricon-search-empty"></i></button>
+    <button type="button" class="nv-btn nv-btn-primary nv-btn-circle nv-btn-sm"><i class="nvicon-search-empty"></i></button>
+    <button type="button" class="nv-btn nv-btn-primary nv-btn-circle"><i class="nvicon-search-empty"></i></button>
+    <button type="button" class="nv-btn nv-btn-primary nv-btn-circle nv-btn-lg"><i class="nvicon-search-empty"></i></button>
         </div>
-        <a href="javascript:void(0);" class="c-toggle"><span>显示代码</span><i class="zricon-arrow-down"></i></a>
+        <a href="javascript:void(0);" class="c-toggle"><span>显示代码</span><i class="nvicon-arrow-down"></i></a>
     </section>
     <div class="c-block-50"></div>
     <section class="c-sub-title">
         <p>图标按钮 <a href="#">#</a></p>
-        <span>图标按钮：带icon的圆形按钮 <i class="c-block-inline">zr-btn-circle</i> 、带icon和text的按钮则同标准按钮</span>
+        <span>图标按钮：带icon的圆形按钮 <i class="c-block-inline">nv-btn-circle</i> 、带icon和text的按钮则同标准按钮</span>
     </section>
     <section class="c-code">
         <!--switch code show or hide-->
         <div class="c-code-switch">&lt;code&gt;</div>
         <div class="c-demo">
             <p class="c-demo-btn">
-                <button type="button" class="zr-btn zr-btn-primary zr-btn-circle"><i class="zricon-search-empty"></i></button>
-                <button type="button" class="zr-btn zr-btn-primary"><i class="zricon-search-empty"></i>search</button>
+                <button type="button" class="nv-btn nv-btn-primary nv-btn-circle"><i class="nvicon-search-empty"></i></button>
+                <button type="button" class="nv-btn nv-btn-primary"><i class="nvicon-search-empty"></i>search</button>
             </p>
         </div>
         <div class="c-code-inner c-code-hide">
-        <button type="button" class="zr-btn zr-btn-primary zr-btn-circle"><i class="zricon-search-empty"></i></button>
-        <button type="button" class="zr-btn zr-btn-primary"><i class="zricon-search-empty"></i>search</button>
+        <button type="button" class="nv-btn nv-btn-primary nv-btn-circle"><i class="nvicon-search-empty"></i></button>
+        <button type="button" class="nv-btn nv-btn-primary"><i class="nvicon-search-empty"></i>search</button>
         </div>
-        <a href="javascript:void(0);" class="c-toggle"><span>显示代码</span><i class="zricon-arrow-down"></i></a>
+        <a href="javascript:void(0);" class="c-toggle"><span>显示代码</span><i class="nvicon-arrow-down"></i></a>
     </section>
     <div class="c-block-50"></div>
     <section class="c-sub-title">
         <p>组合按钮 <a href="#">#</a></p>
-        <span>组合按钮需给父级添加 <i class="c-block-inline">zr-btn-group</i> ，组合按钮的样式分为：basic、with icon、icon</span>
+        <span>组合按钮需给父级添加 <i class="c-block-inline">nv-btn-group</i> ，组合按钮的样式分为：basic、with icon、icon</span>
     </section>
     <section class="c-code">
         <!--switch code show or hide-->
         <div class="c-code-switch">&lt;code&gt;</div>
         <div class="c-demo">
-            <div class="zr-btn-group">
-                <button type="button" class="zr-btn zr-btn-primary">text1</button>
-                <button type="button" class="zr-btn zr-btn-primary">text2</button>
-                <button type="button" class="zr-btn zr-btn-primary">text3</button>
+            <div class="nv-btn-group">
+                <button type="button" class="nv-btn nv-btn-primary">text1</button>
+                <button type="button" class="nv-btn nv-btn-primary">text2</button>
+                <button type="button" class="nv-btn nv-btn-primary">text3</button>
             </div>
-            <div class="zr-btn-group">
-                <button type="button" class="zr-btn zr-btn-primary"><i class="zricon-arrow-left"></i>text1</button>
-                <button type="button" class="zr-btn zr-btn-primary">text2<i class="zricon-arrow-right"></i></button>
+            <div class="nv-btn-group">
+                <button type="button" class="nv-btn nv-btn-primary"><i class="nvicon-arrow-left"></i>text1</button>
+                <button type="button" class="nv-btn nv-btn-primary">text2<i class="nvicon-arrow-right"></i></button>
             </div>
-            <div class="zr-btn-group">
-                <button type="button" class="zr-btn zr-btn-primary"><i class="zricon-arrow-left"></i></button>
-                <button type="button" class="zr-btn zr-btn-primary"><i class="zricon-arrow-right"></i></button>
+            <div class="nv-btn-group">
+                <button type="button" class="nv-btn nv-btn-primary"><i class="nvicon-arrow-left"></i></button>
+                <button type="button" class="nv-btn nv-btn-primary"><i class="nvicon-arrow-right"></i></button>
             </div>
         </div>
         <div class="c-code-inner c-code-hide">
-    <div class="zr-btn-group">
-        <button type="button" class="zr-btn zr-btn-primary">text1</button>
-        <button type="button" class="zr-btn zr-btn-primary">text2</button>
-        <button type="button" class="zr-btn zr-btn-primary">text3</button>
+    <div class="nv-btn-group">
+        <button type="button" class="nv-btn nv-btn-primary">text1</button>
+        <button type="button" class="nv-btn nv-btn-primary">text2</button>
+        <button type="button" class="nv-btn nv-btn-primary">text3</button>
     </div>
-    <div class="zr-btn-group">
-        <button type="button" class="zr-btn zr-btn-primary"><i class="zricon-arrow-left"></i>text1</button>
-        <button type="button" class="zr-btn zr-btn-primary">text2<i class="zricon-arrow-right"></i></button>
+    <div class="nv-btn-group">
+        <button type="button" class="nv-btn nv-btn-primary"><i class="nvicon-arrow-left"></i>text1</button>
+        <button type="button" class="nv-btn nv-btn-primary">text2<i class="nvicon-arrow-right"></i></button>
     </div>
-    <div class="zr-btn-group">
-        <button type="button" class="zr-btn zr-btn-primary"><i class="zricon-arrow-left"></i></button>
-        <button type="button" class="zr-btn zr-btn-primary"><i class="zricon-arrow-right"></i></button>
+    <div class="nv-btn-group">
+        <button type="button" class="nv-btn nv-btn-primary"><i class="nvicon-arrow-left"></i></button>
+        <button type="button" class="nv-btn nv-btn-primary"><i class="nvicon-arrow-right"></i></button>
     </div>
         </div>
-        <a href="javascript:void(0);" class="c-toggle"><span>显示代码</span><i class="zricon-arrow-down"></i></a>
+        <a href="javascript:void(0);" class="c-toggle"><span>显示代码</span><i class="nvicon-arrow-down"></i></a>
     </section>
     <div class="c-block-50"></div>
 
