--- a/examples/design/安全探索.html
+++ b/examples/design/安全探索.html
@@ -6,14 +6,14 @@
     <link type="text/css" rel="stylesheet" href="/frontPage/css/content.min.css?11" />
     <!--注意此段js必须第一引入在开发模式下{-->
     <!--}-->
-    <script type="text/javascript" src="/js/zr.min.js?1"></script>
+    <script type="text/javascript" src="/js/nv.min.js?1"></script>
     <script type="text/javascript">
-		Zr.config({
+		Nv.config({
 			baseUrl:"/js/plugin_modules/",
 			requestTime:true
 		})
-		Zr.ready(function(){
-			Zr.use("./js/quickMenu","./js/code")
+		Nv.ready(function(){
+			Nv.use("./js/quickMenu","./js/code")
 		})
     </script>
 </head>
@@ -31,7 +31,7 @@
             <div>出现后一段时间自动消失的反馈信息层，主要用于对系统级、应用级或用户操作结果的提示，区别在于浮层不强求用户一定要对其进行交互，3~5秒内不进行操作此浮层自动消失，因而其对用户的打扰也更弱。</div>
             <div class="c-img">
                 <div>
-                    <img src="http://storage.jd.com/zrstatic/design/design-13-01.png" alt="">
+                    <img src="http://storage.jd.com/nvstatic/design/design-13-01.png" alt="">
                 </div>
                 <div class="c-title-4">可撤销浮层示例</div>
             </div>
@@ -44,7 +44,7 @@
             <div>通常用于在执行毁灭性操作前，让用户进行二次确认。一般由操作会造成的结果描述，继续执行操作的按钮和取消按钮构成。点击空白区域和取消都等同于取消操作。</div>
             <div class="c-img">
                 <div>
-                    <img src="http://storage.jd.com/zrstatic/design/design-13-02.png" alt="">
+                    <img src="http://storage.jd.com/nvstatic/design/design-13-02.png" alt="">
                 </div>
                 <div class="c-title-4">浮层二次确认示例</div>
             </div>
