--- a/examples/divide.html
+++ b/examples/divide.html
@@ -3,8 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <title>组件平台显示内容</title>
-    <link type="text/css" rel="stylesheet" href="/frontPage/css/content.min.css?4"/>
-    <script type="text/javascript" src="//cdn.bootcss.com/jquery/1.10.1/jquery.min.js"></script>
+    <link type="text/css" rel="stylesheet" href="//storage.jd.com/v2.0.0/content.min.css" />
+    <link type="text/css" rel="stylesheet" href="//storage.360buyimg.com/v2.0.0/nv.min.css" />
+    <script type="text/javascript" src="//storage.360buyimg.com/v2.0.0/nv.js"></script>
 
 </head>
 <body>
@@ -13,42 +14,42 @@
         <p>Divide 分割线</p>
         <span>
             用来分割不同内容
-            <a style="font-size: 16px; margin-right: 15px;" href="//github.com/guguaihaha/zr-source/blob/master/docs/inner/divide.md"><b>API文档</b></a>
-            <a style="font-size: 16px" href="//github.com/guguaihaha/zr-source/issues/21"><b>组件问题反馈和讨论</b></a>
+            <a style="font-size: 16px; margin-right: 15px;" href="//github.com/guguaihaha/nv-source/blob/master/docs/inner/divide.md"><b>API文档</b></a>
+            <a style="font-size: 16px" href="//github.com/guguaihaha/nv-source/issues/21"><b>组件问题反馈和讨论</b></a>
         </span>
     </section>
     <div class="c-line"></div>
     <section class="c-sub-title">
         <p>基本样式 <a href="#">#</a></p>
-        <span>水平分割线最基本的样式：实线分割线，只需要添加样式 <i class="c-block-inline">zr-divide-hr</i>；虚线分割线，只需要添加样式 <i class="c-block-inline">zr-divide-dashed</i>；带标题的分割线，只需要添加样式 <i class="c-block-inline">zr-divide-fieldset</i></span>
+        <span>水平分割线最基本的样式：实线分割线，只需要添加样式 <i class="c-block-inline">nv-divide-hr</i>；虚线分割线，只需要添加样式 <i class="c-block-inline">nv-divide-dashed</i>；带标题的分割线，只需要添加样式 <i class="c-block-inline">nv-divide-fieldset</i></span>
     </section>
     <section class="c-code">
         <!--switch code show or hide-->
         <div class="c-demo">
-            <div class="zr-divide">
+            <div class="nv-divide">
                 <p>A friend of mine named Paul received an automobile from his brother as Christmas present. On Christmas eve, when Paul came out of his office, a street urchin was looking around the shining new car, admiring it.</p>
                 <!--实线分割线-->
-                <div class="zr-divide-horizontal"></div>
+                <div class="nv-divide-horizontal"></div>
                 <p>A friend of mine named Paul received an automobile from his brother as Christmas present. On Christmas eve, when Paul came out of his office, a street urchin was looking around the shining new car, admiring it.</p>
                 <!--虚线分割线-->
-                <div class="zr-divide-horizontal zr-divide-dashed"></div>
+                <div class="nv-divide-horizontal nv-divide-dashed"></div>
                 <p>A friend of mine named Paul received an automobile from his brother as Christmas present. On Christmas eve, when Paul came out of his office, a street urchin was looking around the shining new car, admiring it.</p>
                 <!--带标题的分割线-->
-                <div class="zr-divide-fieldset"><span class="zr-divide-legend">TEXT</span></div>
+                <div class="nv-divide-fieldset"><span class="nv-divide-legend">TEXT</span></div>
                 <p>A friend of mine named Paul received an automobile from his brother as Christmas present. On Christmas eve, when Paul came out of his office, a street urchin was looking around the shining new car, admiring it.</p>
             </div>
         </div>
         <div class="c-code-inner c-code-hide">
-    <div class="zr-divide">
+    <div class="nv-divide">
         <!--实线分割线-->
-        <div class="zr-divide-horizontal"></div>
+        <div class="nv-divide-horizontal"></div>
         <!--虚线分割线-->
-        <div class="zr-divide-horizontal zr-divide-dashed"></div>
+        <div class="nv-divide-horizontal nv-divide-dashed"></div>
         <!--带标题的分割线-->
-        <div class="zr-divide-fieldset"><span class="zr-divide-legend">TEXT</span></div>
+        <div class="nv-divide-fieldset"><span class="nv-divide-legend">TEXT</span></div>
     </div>
         </div>
-        <a href="javascript:void(0);" class="c-toggle"><span>显示代码</span><i class="zricon-arrow-down"></i></a>
+        <a href="javascript:void(0);" class="c-toggle"><span>显示代码</span><i class="nvicon-arrow-down"></i></a>
     </section>
     <div class="c-block-50"></div>
 
@@ -60,37 +61,37 @@
     <section class="c-code">
         <!--switch code show or hide-->
         <div class="c-demo">
-            <div class="zr-divide">
-                <a class="zr-divide-unlink"><cite>Text</cite></a>
-                <span class="zr-divide-vertical">|</span>
+            <div class="nv-divide">
+                <a class="nv-divide-unlink"><cite>Text</cite></a>
+                <span class="nv-divide-vertical">|</span>
                 <a href="">Link One</a>
-                <span class="zr-divide-vertical">|</span>
+                <span class="nv-divide-vertical">|</span>
                 <a href="">Link Two</a>
             </div>
         </div>
         <div class="c-code-inner c-code-hide">
-    <div class="zr-divide">
-        <a class="zr-divide-unlink"><cite>Text</cite></a>
-        <span class="zr-divide-separator">|</span>
+    <div class="nv-divide">
+        <a class="nv-divide-unlink"><cite>Text</cite></a>
+        <span class="nv-divide-separator">|</span>
         <a href="">Link One</a>
-        <span class="zr-divide-separator">|</span>
+        <span class="nv-divide-separator">|</span>
         <a href="">Link Two</a>
     </div>
         </div>
-        <a href="javascript:void(0);" class="c-toggle"><span>显示代码</span><i class="zricon-arrow-down"></i></a>
+        <a href="javascript:void(0);" class="c-toggle"><span>显示代码</span><i class="nvicon-arrow-down"></i></a>
     </section>
     <div class="c-block-16"></div>
 </article>
 <!--注意此段js必须第一引入在开发模式下{-->
 <script type="text/javascript" src="js/nav.js"></script>
-<script type="text/javascript" src="/js/zr.min.js?3"></script>
+<script type="text/javascript" src="/js/nv.min.js?3"></script>
 <script type="text/javascript">
-    Zr.config({
+    Nv.config({
         baseUrl: "/js/plugin_modules/"
     })
-    Zr.ready(function () {
-        Zr.use("./js/quickMenu", "./js/code",function (zr) {
-            zr.dom.dispatch();
+    Nv.ready(function () {
+        Nv.use("./js/quickMenu", "./js/code",function (nv) {
+            nv.dom.dispatch();
         })
     })
 </script>
