--- a/examples/input.html
+++ b/examples/input.html
@@ -31,121 +31,121 @@
     <div class="c-block-50"></div>
     <section class="c-sub-title">
         <p>基础样式 <a href="#">#</a></p>
-        <span>最基础输入框的使用状态有默认状态和禁用状态，只需要添加样式  <i class="c-block-inline">zr-input</i> ；input标签有  <i class="c-block-inline">disabled</i> 属性时会显示成禁用状态。</span>
+        <span>最基础输入框的使用状态有默认状态和禁用状态，只需要添加样式  <i class="c-block-inline">nv-input</i> ；input标签有  <i class="c-block-inline">disabled</i> 属性时会显示成禁用状态。</span>
     </section>
     <section class="c-code">
         <!--switch code show or hide-->
         <div class="c-code-switch">&lt;code&gt;</div>
         <div class="c-demo">
             <div style="width: 240px">
-                <input type="text" placeholder="Please input text" class="zr-input">
+                <input type="text" placeholder="Please input text" class="nv-input">
             </div>
             <div style="width: 240px">
-                <input type="text" placeholder="Disabled" disabled="disabled" class="zr-input">
+                <input type="text" placeholder="Disabled" disabled="disabled" class="nv-input">
             </div>
         </div>
         <div class="c-code-inner c-code-hide">
     <!--默认状态-->
-    <input type="text" placeholder="Please input text" class="zr-input">
+    <input type="text" placeholder="Please input text" class="nv-input">
     <!--禁用状态，只需给input标签设置disabled属性-->
-    <input type="text" placeholder="Text" disabled="disabled" class="zr-input">
+    <input type="text" placeholder="Text" disabled="disabled" class="nv-input">
         </div>
-        <a href="javascript:void(0);" class="c-toggle"><span>显示代码</span><i class="zricon-arrow-down"></i></a>
+        <a href="javascript:void(0);" class="c-toggle"><span>显示代码</span><i class="nvicon-arrow-down"></i></a>
     </section>
     <div class="c-block-50"></div>
     <section class="c-sub-title">
         <p>输入框尺寸 <a href="#">#</a></p>
         <span>定义了输入框三种尺寸：大、中（默认）、小；高度分别为  <i class="c-block-inline">40px</i>   <i class="c-block-inline">32px</i>   <i class="c-block-inline">24px</i>；
-        大尺寸和小尺寸需额外增加样式 <i class="c-block-inline">zr-input-lg</i> 和 <i class="c-block-inline">zr-input-sm</i>。</span>
+        大尺寸和小尺寸需额外增加样式 <i class="c-block-inline">nv-input-lg</i> 和 <i class="c-block-inline">nv-input-sm</i>。</span>
     </section>
     <section class="c-code">
         <!--switch code show or hide-->
         <div class="c-code-switch">&lt;code&gt;</div>
         <div class="c-demo">
             <div style="width: 240px">
-                <input type="text" placeholder="Large" class="zr-input zr-input-lg">
+                <input type="text" placeholder="Large" class="nv-input nv-input-lg">
             </div>
             <div style="width: 240px">
-                <input type="text" placeholder="Default" class="zr-input">
+                <input type="text" placeholder="Default" class="nv-input">
             </div>
             <div style="width: 240px">
-                <input type="text" placeholder="Small" class="zr-input zr-input-sm">
+                <input type="text" placeholder="Small" class="nv-input nv-input-sm">
             </div>
         </div>
         <div class="c-code-inner c-code-hide">
-    <!--大尺寸 需额外增加样式“zr-input-lg”-->
-    <input type="text" placeholder="Large" class="zr-input zr-input-lg">
+    <!--大尺寸 需额外增加样式“nv-input-lg”-->
+    <input type="text" placeholder="Large" class="nv-input nv-input-lg">
     <!--默认尺寸-->
-    <input type="text" placeholder="Default" class="zr-input">
-    <!--小尺寸 需额外增加样式“zr-input-sm”-->
-    <input type="text" placeholder="Small" class="zr-input zr-input-sm">
+    <input type="text" placeholder="Default" class="nv-input">
+    <!--小尺寸 需额外增加样式“nv-input-sm”-->
+    <input type="text" placeholder="Small" class="nv-input nv-input-sm">
         </div>
-        <a href="javascript:void(0);" class="c-toggle"><span>显示代码</span><i class="zricon-arrow-down"></i></a>
+        <a href="javascript:void(0);" class="c-toggle"><span>显示代码</span><i class="nvicon-arrow-down"></i></a>
     </section>
 
     <div class="c-block-50"></div>
     <section class="c-sub-title">
         <p>可清除输入内容 <a href="#">#</a></p>
-        <span>输入状态下点击右侧icon，可清除输入内容；只需增加样式 <i class="c-block-inline">zr-input-clear</i>。</span>
+        <span>输入状态下点击右侧icon，可清除输入内容；只需增加样式 <i class="c-block-inline">nv-input-clear</i>。</span>
     </section>
     <section class="c-code">
         <!--switch code show or hide-->
         <div class="c-code-switch">&lt;code&gt;</div>
         <div class="c-demo">
             <div style="width: 240px">
-                <input type="text" placeholder="Please input text" class="zr-input zr-input-clear">
+                <input type="text" placeholder="Please input text" class="nv-input nv-input-clear">
             </div>
         </div>
         <div class="c-code-inner c-code-hide">
-    <!--只需增加样式“zr-input-clear”-->
-    <input type="text" placeholder="Please input text" class="zr-input zr-input-clear">
+    <!--只需增加样式“nv-input-clear”-->
+    <input type="text" placeholder="Please input text" class="nv-input nv-input-clear">
         </div>
-        <a href="javascript:void(0);" class="c-toggle"><span>显示代码</span><i class="zricon-arrow-down"></i></a>
+        <a href="javascript:void(0);" class="c-toggle"><span>显示代码</span><i class="nvicon-arrow-down"></i></a>
     </section>
 
     <div class="c-block-50"></div>
     <section class="c-sub-title">
         <p>带icon的输入框 <a href="#">#</a></p>
-        <span>带有icon的输入框，分为两种：可操作的icon置于输入框的右侧（默认状态）；提醒性的icon置于输入框左侧，父级div需增加样式 <i class="c-block-inline">zr-input-left</i>。</span>
+        <span>带有icon的输入框，分为两种：可操作的icon置于输入框的右侧（默认状态）；提醒性的icon置于输入框左侧，父级div需增加样式 <i class="c-block-inline">nv-input-left</i>。</span>
     </section>
     <section class="c-code">
         <!--switch code show or hide-->
         <div class="c-code-switch">&lt;code&gt;</div>
         <div class="c-demo">
             <div style="width: 240px">
-                <div class="zr-input-group">
-                    <input type="text" placeholder="Please input text" class="zr-input">
-                    <span class="zr-input-addon">
-                        <i class="zricon-calendar-empty"></i>
+                <div class="nv-input-group">
+                    <input type="text" placeholder="Please input text" class="nv-input">
+                    <span class="nv-input-addon">
+                        <i class="nvicon-calendar-empty"></i>
                     </span>
                 </div>
             </div>
             <div style="width: 240px">
-                <div class="zr-input-group zr-input-left">
-                    <span class="zr-input-addon">
-                        <i class="zricon-user-empty"></i>
+                <div class="nv-input-group nv-input-left">
+                    <span class="nv-input-addon">
+                        <i class="nvicon-user-empty"></i>
                     </span>
-                    <input type="text" placeholder="Please input text" class="zr-input">
+                    <input type="text" placeholder="Please input text" class="nv-input">
                 </div>
             </div>
         </div>
         <div class="c-code-inner c-code-hide">
     <!--默认状态-->
-    <div class="zr-input-group">
-        <input type="text" placeholder="Please input text" class="zr-input">
-        <span class="zr-input-addon">
-            <i class="zricon-calendar-empty"></i>
+    <div class="nv-input-group">
+        <input type="text" placeholder="Please input text" class="nv-input">
+        <span class="nv-input-addon">
+            <i class="nvicon-calendar-empty"></i>
         </span>
     </div>
-    <!--增加样式“zr-input-left”，icon置于左侧-->
-    <div class="zr-input-group zr-input-left">
-        <span class="zr-input-addon">
-            <i class="zricon-user-empty"></i>
+    <!--增加样式“nv-input-left”，icon置于左侧-->
+    <div class="nv-input-group nv-input-left">
+        <span class="nv-input-addon">
+            <i class="nvicon-user-empty"></i>
         </span>
-        <input type="text" placeholder="Please input text" class="zr-input">
+        <input type="text" placeholder="Please input text" class="nv-input">
     </div>
         </div>
-        <a href="javascript:void(0);" class="c-toggle"><span>显示代码</span><i class="zricon-arrow-down"></i></a>
+        <a href="javascript:void(0);" class="c-toggle"><span>显示代码</span><i class="nvicon-arrow-down"></i></a>
     </section>
 
     <div class="c-block-50"></div>
@@ -158,50 +158,50 @@
         <div class="c-code-switch">&lt;code&gt;</div>
         <div class="c-demo">
             <div style="width: 480px;height: 64px">
-                <textarea class="zr-textarea" maxlength="100" placeholder="Textarea"></textarea>
+                <textarea class="nv-textarea" maxlength="100" placeholder="Textarea"></textarea>
             </div>
         </div>
         <div class="c-code-inner c-code-hide">
     <!--maxlength属性用于显示最大可输入字符数-->
-    <textarea class="zr-textarea" maxlength="100" placeholder="Textarea"></textarea>
+    <textarea class="nv-textarea" maxlength="100" placeholder="Textarea"></textarea>
         </div>
-        <a href="javascript:void(0);" class="c-toggle"><span>显示代码</span><i class="zricon-arrow-down"></i></a>
+        <a href="javascript:void(0);" class="c-toggle"><span>显示代码</span><i class="nvicon-arrow-down"></i></a>
     </section>
 
     <div class="c-block-50"></div>
     <section class="c-sub-title">
         <p>组合输入框 <a href="#">#</a></p>
-        <span>可前置或后置元素，一般为标签或按钮；默认状态为标签，按钮需额外增加样式  <i class="c-block-inline">zr-input-btn</i></span>
+        <span>可前置或后置元素，一般为标签或按钮；默认状态为标签，按钮需额外增加样式  <i class="c-block-inline">nv-input-btn</i></span>
     </section>
     <section class="c-code">
         <!--switch code show or hide-->
         <div class="c-code-switch">&lt;code&gt;</div>
         <div class="c-demo">
             <div style="width: 480px">
-                <div class="zr-input-wapper">
-                    <select name="country" class="zr-select">
+                <div class="nv-input-wapper">
+                    <select name="country" class="nv-select">
                         <option value="option1">option1</option>
                         <option value="option2">option2</option>
                     </select>
-                    <input type="text" class="zr-input">
+                    <input type="text" class="nv-input">
                 </div>
             </div>
             <div style="width: 480px">
-                <div class="zr-input-wapper zr-input-btn">
-                    <select name="country" class="zr-select">
+                <div class="nv-input-wapper nv-input-btn">
+                    <select name="country" class="nv-select">
                         <option value="option1">option1</option>
                         <option value="option2">option2</option>
                     </select>
-                    <input type="text" class="zr-input">
-                    <span class="zr-input-addon">
-                        <i class="zricon-search-empty"></i>
+                    <input type="text" class="nv-input">
+                    <span class="nv-input-addon">
+                        <i class="nvicon-search-empty"></i>
                     </span>
                 </div>
             </div>
             <div style="width: 480px">
-                <div class="zr-input-wapper zr-input-wapper-left zr-input-btn">
-                    <input type="text" class="zr-input">
-                    <select name="country" class="zr-select">
+                <div class="nv-input-wapper nv-input-wapper-left nv-input-btn">
+                    <input type="text" class="nv-input">
+                    <select name="country" class="nv-select">
                         <option value="option1">option1</option>
                         <option value="option2">option2</option>
                     </select>
@@ -209,47 +209,47 @@
             </div>
         </div>
         <div class="c-code-inner c-code-hide">
-    <div class="zr-input-wapper">
-        <select name="country" class="zr-select">
+    <div class="nv-input-wapper">
+        <select name="country" class="nv-select">
             <option value="option1">option1</option>
             <option value="option2">option2</option>
         </select>
-        <input type="text" class="zr-input">
+        <input type="text" class="nv-input">
     </div>
-    <div class="zr-input-wapper zr-input-btn">
-        <div class="zr-input-wapper zr-input-btn">
-            <select name="country" class="zr-select">
+    <div class="nv-input-wapper nv-input-btn">
+        <div class="nv-input-wapper nv-input-btn">
+            <select name="country" class="nv-select">
                 <option value="option1">option1</option>
                 <option value="option2">option2</option>
             </select>
-            <input type="text" class="zr-input">
-            <span class="zr-input-addon">
-                <i class="zricon-search-empty"></i>
+            <input type="text" class="nv-input">
+            <span class="nv-input-addon">
+                <i class="nvicon-search-empty"></i>
             </span>
         </div>
     </div>
-    <div class="zr-input-wapper zr-input-wapper-left zr-input-btn">
-        <input type="text" class="zr-input">
-        <select name="country" class="zr-select">
+    <div class="nv-input-wapper nv-input-wapper-left nv-input-btn">
+        <input type="text" class="nv-input">
+        <select name="country" class="nv-select">
             <option value="option1">option1</option>
             <option value="option2">option2</option>
         </select>
     </div>
         </div>
-        <a href="javascript:void(0);" class="c-toggle"><span>显示代码</span><i class="zricon-arrow-down"></i></a>
+        <a href="javascript:void(0);" class="c-toggle"><span>显示代码</span><i class="nvicon-arrow-down"></i></a>
     </section>
 </article>
 <!--注意此段js必须第一引入在开发模式下{-->
 <script type="text/javascript" src="js/input.js"></script>
 <script type="text/javascript" src="js/select.js"></script>
-<script type="text/javascript" src="http://storage.jd.com/v1.0.0/zr.dev.min.js"></script>
+<script type="text/javascript" src="http://storage.jd.com/v1.0.0/nv.dev.min.js"></script>
 <script type="text/javascript">
-	Zr.config({
+	Nv.config({
 		baseUrl: "/js/plugin_modules/"
 	})
-	Zr.ready(function () {
-		Zr.use("./js/quickMenu", "./js/code",function (zr) {
-			zr.dom.dispatch();
+	Nv.ready(function () {
+		Nv.use("./js/quickMenu", "./js/code",function (nv) {
+			nv.dom.dispatch();
 		})
 	})
 </script>
