--- a/examples/page.html
+++ b/examples/page.html
@@ -36,21 +36,21 @@
         <!--switch code show or hide-->
         <div class="c-code-switch">&lt;code&gt;</div>
         <div class="c-demo">
-            <div class="zr-page basis-page"></div>
+            <div class="nv-page basis-page"></div>
         </div>
         <div class="c-code-inner c-code-hide">
             <!--HTML代码-->
-            <div class="zr-page basis-page"></div>
+            <div class="nv-page basis-page"></div>
             <!--jQuery-->
-            Zr.ready(function(){
-                Zr.use("./zrModules/page",function(zr,page){
+            Nv.ready(function(){
+                Nv.use("./nvModules/page",function(nv,page){
                     page.init(200,{
                         items_per_page:40
                     },document.getElementsByClassName("basis-page")[0]);
                 })
             })
         </div>
-        <a href="javascript:void(0);" class="c-toggle"><span>显示代码</span><i class="zricon-arrow-down"></i></a>
+        <a href="javascript:void(0);" class="c-toggle"><span>显示代码</span><i class="nvicon-arrow-down"></i></a>
     </section>
     <div class="c-block-50"></div>
     <section class="c-sub-title">
@@ -61,19 +61,19 @@
         <!--switch code show or hide-->
         <div class="c-code-switch">&lt;code&gt;</div>
         <div class="c-demo">
-            <div class="zr-page more-page"></div>
+            <div class="nv-page more-page"></div>
         </div>
         <div class="c-code-inner c-code-hide">
             <!--HTML-->
-            <div class="zr-page more-page"></div>
+            <div class="nv-page more-page"></div>
             <!--jQuery-->
-            Zr.use("./zrModules/page",function(zr,page){
+            Nv.use("./nvModules/page",function(nv,page){
                     page.init(200,{
                         items_per_page:10
                     },document.getElementsByClassName("more-page")[0]);
             })
         </div>
-        <a href="javascript:void(0);" class="c-toggle"><span>显示代码</span><i class="zricon-arrow-down"></i></a>
+        <a href="javascript:void(0);" class="c-toggle"><span>显示代码</span><i class="nvicon-arrow-down"></i></a>
     </section>
 
     <div class="c-block-50"></div>
@@ -85,19 +85,19 @@
         <!--switch code show or hide-->
         <div class="c-code-switch">&lt;code&gt;</div>
         <div class="c-demo">
-            <div class="zr-page select-page"></div>
+            <div class="nv-page select-page"></div>
         </div>
         <div class="c-code-inner c-code-hide">
             <!--HTML-->
-            <div class="zr-page select-page"></div>
+            <div class="nv-page select-page"></div>
             <!--jQuery-->
-            Zr.use("./zrModules/page",function(zr,page){
+            Nv.use("./nvModules/page",function(nv,page){
                     page.init(200,{
                         select_page:true
                 },document.getElementsByClassName("select-page")[0]);
             })
         </div>
-        <a href="javascript:void(0);" class="c-toggle"><span>显示代码</span><i class="zricon-arrow-down"></i></a>
+        <a href="javascript:void(0);" class="c-toggle"><span>显示代码</span><i class="nvicon-arrow-down"></i></a>
     </section>
 
     <div class="c-block-50"></div>
@@ -109,20 +109,20 @@
         <!--switch code show or hide-->
         <div class="c-code-switch">&lt;code&gt;</div>
         <div class="c-demo">
-            <div class="zr-page jump-page"></div>
+            <div class="nv-page jump-page"></div>
         </div>
         <div class="c-code-inner c-code-hide">
             <!--HTML-->
-            <div class="zr-page jump-page"></div>
+            <div class="nv-page jump-page"></div>
             <!--jQuery-->
-            Zr.use("./zrModules/page",function(zr,page){
+            Nv.use("./nvModules/page",function(nv,page){
                     page.init(200,{
                         select_page:true,
                         jump:true
                 },document.getElementsByClassName("jump-page")[0]);
             })
         </div>
-        <a href="javascript:void(0);" class="c-toggle"><span>显示代码</span><i class="zricon-arrow-down"></i></a>
+        <a href="javascript:void(0);" class="c-toggle"><span>显示代码</span><i class="nvicon-arrow-down"></i></a>
     </section>
 
     <div class="c-block-50"></div>
@@ -134,13 +134,13 @@
         <!--switch code show or hide-->
         <div class="c-code-switch">&lt;code&gt;</div>
         <div class="c-demo">
-            <div class="zr-page total-page"></div>
+            <div class="nv-page total-page"></div>
         </div>
         <div class="c-code-inner c-code-hide">
             <!--HTML-->
-            <div class="zr-page total-page"></div>
+            <div class="nv-page total-page"></div>
             <!--jQuery-->
-            Zr.use("./zrModules/page",function(zr,page){
+            Nv.use("./nvModules/page",function(nv,page){
                     page.init(200,{
                         select_page:true,
                         jump:true,
@@ -148,7 +148,7 @@
                 },document.getElementsByClassName("total-page")[0]);
             })
         </div>
-        <a href="javascript:void(0);" class="c-toggle"><span>显示代码</span><i class="zricon-arrow-down"></i></a>
+        <a href="javascript:void(0);" class="c-toggle"><span>显示代码</span><i class="nvicon-arrow-down"></i></a>
     </section>
 
     <div class="c-block-50"></div>
@@ -160,13 +160,13 @@
         <!--switch code show or hide-->
         <div class="c-code-switch">&lt;code&gt;</div>
         <div class="c-demo">
-            <div class="zr-page simple-page"></div>
+            <div class="nv-page simple-page"></div>
         </div>
         <div class="c-code-inner c-code-hide">
             <!--HTML-->
-            <div class="zr-page simple-page"></div>
+            <div class="nv-page simple-page"></div>
             <!--jQuery-->
-            Zr.use("./zrModules/page",function(zr,quickMenu,code,page){
+            Nv.use("./nvModules/page",function(nv,quickMenu,code,page){
                     page.init(200,{
                         select_page:true,
                         jump:true,
@@ -175,7 +175,7 @@
                 },document.getElementsByClassName("simple-page")[0]);
             })
         </div>
-        <a href="javascript:void(0);" class="c-toggle"><span>显示代码</span><i class="zricon-arrow-down"></i></a>
+        <a href="javascript:void(0);" class="c-toggle"><span>显示代码</span><i class="nvicon-arrow-down"></i></a>
     </section>
 
     <div class="c-block-50"></div>
@@ -187,19 +187,19 @@
         <!--switch code show or hide-->
         <div class="c-code-switch">&lt;code&gt;</div>
         <div class="c-demo">
-            <div class="zr-page mini-page"></div>
+            <div class="nv-page mini-page"></div>
         </div>
         <div class="c-code-inner c-code-hide">
             <!--HTML-->
-            <div class="zr-page mini-page"></div>
+            <div class="nv-page mini-page"></div>
             <!--jQuery-->
-            Zr.use("./zrModules/page",function(zr,page){
+            Nv.use("./nvModules/page",function(nv,page){
             page.init(200,{
                 mini:true
             },document.getElementsByClassName("mini-page")[0]);
             })
         </div>
-        <a href="javascript:void(0);" class="c-toggle"><span>显示代码</span><i class="zricon-arrow-down"></i></a>
+        <a href="javascript:void(0);" class="c-toggle"><span>显示代码</span><i class="nvicon-arrow-down"></i></a>
     </section>
     <div class="c-block-50"></div>
     <section class="c-sub-title">
@@ -449,14 +449,14 @@
     </section>
 </article>
 <!--注意此段js必须第一引入在开发模式下{-->
-<script type="text/javascript" language="javascript" src="//storage.360buyimg.com/0.0.1/zr.min.js"></script>
+<script type="text/javascript" language="javascript" src="//storage.360buyimg.com/0.0.1/nv.min.js"></script>
 <script type="text/javascript">
-    Zr.config({
+    Nv.config({
         baseUrl: "/js/plugin_modules/",
         "requestTime":true
     })
-    Zr.ready(function () {
-        Zr.use("./js/quickMenu", "./js/code","./zrModules/page",function(zr,quickMenu,code,page){
+    Nv.ready(function () {
+        Nv.use("./js/quickMenu", "./js/code","./nvModules/page",function(nv,quickMenu,code,page){
             var page=page.init;
             page(200,{
                 items_per_page:40
